@@ -25,6 +25,7 @@
  *   Patrick Beard
  *   Norris Boyd
  *   Igor Bukanov
+ *   Mike Harm
  *   Ethan Hugg
  *   Bob Jervis
  *   Roger Lawrence
@@ -48,14 +49,15 @@
 
 package org.mozilla.javascript;
 
+import java.io.Serializable;
 import java.lang.reflect.*;
 import java.text.MessageFormat;
 import java.util.Locale;
 import java.util.ResourceBundle;
 
+import org.mozilla.javascript.ast.FunctionNode;
 import org.mozilla.javascript.xml.XMLObject;
 import org.mozilla.javascript.xml.XMLLib;
-import org.mozilla.javascript.continuations.Continuation;
 
 /**
  * This is the class that implements the runtime.
@@ -71,7 +73,31 @@ public class ScriptRuntime {
     protected ScriptRuntime() {
     }
 
-    private static class NoSuchMethodShim implements Callable {
+
+    /**
+     * Returns representation of the [[ThrowTypeError]] object.
+     * See ECMA 5 spec, 13.2.3
+     */
+    public static BaseFunction typeErrorThrower() {
+      if (THROW_TYPE_ERROR == null) {
+        BaseFunction thrower = new BaseFunction() {
+          @Override
+          public Object call(Context cx, Scriptable scope, Scriptable thisObj, Object[] args) {
+            throw typeError0("msg.op.not.allowed");
+          }
+          @Override
+          public int getLength() {
+            return 0;
+          }
+        };
+        thrower.preventExtensions();
+        THROW_TYPE_ERROR = thrower;
+      }
+      return THROW_TYPE_ERROR;
+    }
+    private static BaseFunction THROW_TYPE_ERROR = null;
+
+    static class NoSuchMethodShim implements Callable {
         String methodName;
         Callable noSuchMethodMethod;
 
@@ -104,13 +130,13 @@ public class ScriptRuntime {
      * There's such a huge space (and some time) waste for the Foo.class
      * syntax: the compiler sticks in a test of a static field in the
      * enclosing class for null and the code for creating the class value.
-     * It has to do this since the reference has to get pushed off til
-     * executiontime (i.e. can't force an early load), but for the
+     * It has to do this since the reference has to get pushed off until
+     * execution time (i.e. can't force an early load), but for the
      * 'standard' classes - especially those in java.lang, we can trust
      * that they won't cause problems by being loaded early.
      */
 
-    public final static Class
+    public final static Class<?>
         BooleanClass      = Kit.classOrNull("java.lang.Boolean"),
         ByteClass         = Kit.classOrNull("java.lang.Byte"),
         CharacterClass    = Kit.classOrNull("java.lang.Character"),
@@ -125,26 +151,32 @@ public class ScriptRuntime {
         StringClass       = Kit.classOrNull("java.lang.String"),
         DateClass         = Kit.classOrNull("java.util.Date");
 
-    public final static Class
+    public final static Class<?>
         ContextClass
             = Kit.classOrNull("org.mozilla.javascript.Context"),
         ContextFactoryClass
             = Kit.classOrNull("org.mozilla.javascript.ContextFactory"),
         FunctionClass
             = Kit.classOrNull("org.mozilla.javascript.Function"),
-        ScriptableClass
-            = Kit.classOrNull("org.mozilla.javascript.Scriptable"),
         ScriptableObjectClass
             = Kit.classOrNull("org.mozilla.javascript.ScriptableObject");
+    public static final Class<Scriptable> ScriptableClass =
+        Scriptable.class;
 
     private static final String[] lazilyNames = {
         "RegExp",        "org.mozilla.javascript.regexp.NativeRegExp",
         "Packages",      "org.mozilla.javascript.NativeJavaTopPackage",
         "java",          "org.mozilla.javascript.NativeJavaTopPackage",
+        "javax",         "org.mozilla.javascript.NativeJavaTopPackage",
+        "org",           "org.mozilla.javascript.NativeJavaTopPackage",
+        "com",           "org.mozilla.javascript.NativeJavaTopPackage",
+        "edu",           "org.mozilla.javascript.NativeJavaTopPackage",
+        "net",           "org.mozilla.javascript.NativeJavaTopPackage",
         "getClass",      "org.mozilla.javascript.NativeJavaTopPackage",
         "JavaAdapter",   "org.mozilla.javascript.JavaAdapter",
         "JavaImporter",  "org.mozilla.javascript.ImporterTopLevel",
-		//	TODO	Grotesque hack using literal string (xml) just to minimize 
+        "Continuation",  "org.mozilla.javascript.NativeContinuation",
+        //	TODO	Grotesque hack using literal string (xml) just to minimize
 		//			changes for now
         "XML",           "(xml)",
         "XMLList",       "(xml)",
@@ -152,9 +184,12 @@ public class ScriptRuntime {
         "QName",         "(xml)",
     };
 
-    private static final Object LIBRARY_SCOPE_KEY = new Object();
+    // Locale object used to request locale-neutral operations.
+    public static Locale ROOT_LOCALE = new Locale("");
+ 
+    private static final Object LIBRARY_SCOPE_KEY = "LIBRARY_SCOPE";
 
-    public static boolean isRhinoRuntimeType(Class cl)
+    public static boolean isRhinoRuntimeType(Class<?> cl)
     {
         if (cl.isPrimitive()) {
             return (cl != Character.TYPE);
@@ -181,7 +216,7 @@ public class ScriptRuntime {
         Scriptable objectProto = ScriptableObject.getObjectPrototype(scope);
 
         // Function.prototype.__proto__ should be Object.prototype
-        Scriptable functionProto = ScriptableObject.getFunctionPrototype(scope);
+        Scriptable functionProto = ScriptableObject.getClassPrototype(scope, "Function");
         functionProto.setPrototype(objectProto);
 
         // Set the prototype of the object passed in if need be
@@ -193,17 +228,27 @@ public class ScriptRuntime {
         NativeGlobal.init(cx, scope, sealed);
 
         NativeArray.init(scope, sealed);
+        if (cx.getOptimizationLevel() > 0) {
+            // When optimizing, attempt to fulfill all requests for new Array(N)
+            // with a higher threshold before switching to a sparse 
+            // representation
+            NativeArray.setMaximumInitialCapacity(200000);            
+        }
         NativeString.init(scope, sealed);
         NativeBoolean.init(scope, sealed);
         NativeNumber.init(scope, sealed);
         NativeDate.init(scope, sealed);
         NativeMath.init(scope, sealed);
+        NativeJSON.init(scope, sealed);
 
         NativeWith.init(scope, sealed);
         NativeCall.init(scope, sealed);
         NativeScript.init(scope, sealed);
+        
+        NativeIterator.init(scope, sealed); // Also initializes NativeGenerator
 
-        boolean withXml = cx.hasFeature(Context.FEATURE_E4X) && cx.getE4xImplementationFactory() != null;
+        boolean withXml = cx.hasFeature(Context.FEATURE_E4X) && 
+                          cx.getE4xImplementationFactory() != null;
 
         for (int i = 0; i != lazilyNames.length; i += 2) {
             String topProperty = lazilyNames[i];
@@ -211,12 +256,15 @@ public class ScriptRuntime {
             if (!withXml && className.equals("(xml)")) {
                 continue;
             } else if (withXml && className.equals("(xml)")) {
-				className = cx.getE4xImplementationFactory().getImplementationClassName();
+				className = cx.getE4xImplementationFactory().
+                               getImplementationClassName();
 			}
-            new LazilyLoadedCtor(scope, topProperty, className, sealed);
+            new LazilyLoadedCtor(scope, topProperty, className, sealed, true);
         }
 
-        Continuation.init(scope, sealed);
+        if (scope instanceof TopLevel) {
+            ((TopLevel)scope).cacheBuiltins();
+        }
 
         return scope;
     }
@@ -229,7 +277,7 @@ public class ScriptRuntime {
         return libScope;
     }
 
-    // It is public so NativeRegExp can access it .
+    // It is public so NativeRegExp can access it.
     public static boolean isJSLineTerminator(int c)
     {
         // Optimization for faster check for eol character:
@@ -240,6 +288,44 @@ public class ScriptRuntime {
         return c == '\n' || c == '\r' || c == 0x2028 || c == 0x2029;
     }
 
+    public static boolean isJSWhitespaceOrLineTerminator(int c) {
+      return (isStrWhiteSpaceChar(c) || isJSLineTerminator(c));
+    }
+
+    /**
+     * Indicates if the character is a Str whitespace char according to ECMA spec:
+     * StrWhiteSpaceChar :::
+      <TAB>
+      <SP>
+      <NBSP>
+      <FF>
+      <VT>
+      <CR>
+      <LF>
+      <LS>
+      <PS>
+      <USP>
+      <BOM>
+     */
+    static boolean isStrWhiteSpaceChar(int c)
+    {
+    	switch (c) {
+    		case ' ': // <SP>
+    		case '\n': // <LF>
+    		case '\r': // <CR>
+    		case '\t': // <TAB>
+    		case '\u00A0': // <NBSP>
+    		case '\u000C': // <FF>
+    		case '\u000B': // <VT>
+    		case '\u2028': // <LS>
+    		case '\u2029': // <PS>
+        case '\uFEFF': // <BOM>
+    			return true;
+    		default:
+    			return Character.getType(c) == Character.SPACE_SEPARATOR;
+    	}
+    }
+
     public static Boolean wrapBoolean(boolean b)
     {
         return b ? Boolean.TRUE : Boolean.FALSE;
@@ -247,7 +333,7 @@ public class ScriptRuntime {
 
     public static Integer wrapInt(int i)
     {
-        return new Integer(i);
+        return Integer.valueOf(i);
     }
 
     public static Number wrapNumber(double x)
@@ -277,6 +363,11 @@ public class ScriptRuntime {
                 return (d == d && d != 0.0);
             }
             if (val instanceof Scriptable) {
+                if (val instanceof ScriptableObject &&
+                    ((ScriptableObject) val).avoidObjectDetection())
+                {
+                    return false;
+                }
                 if (Context.getContext().isVersionECMA1()) {
                     // pure ECMA
                     return true;
@@ -290,10 +381,6 @@ public class ScriptRuntime {
             warnAboutNonJSObject(val);
             return true;
         }
-    }
-
-    public static boolean toBoolean(Object[] args, int index) {
-        return (index < args.length) ? toBoolean(args[index]) : false;
     }
 
     /**
@@ -510,7 +597,7 @@ public class ScriptRuntime {
                 return +0.0;
             }
             startChar = s.charAt(start);
-            if (!Character.isWhitespace(startChar))
+            if (!ScriptRuntime.isStrWhiteSpaceChar(startChar))
                 break;
             start++;
         }
@@ -536,7 +623,7 @@ public class ScriptRuntime {
 
         int end = len - 1;
         char endChar;
-        while (Character.isWhitespace(endChar = s.charAt(end)))
+        while (ScriptRuntime.isStrWhiteSpaceChar(endChar = s.charAt(end)))
             end--;
         if (endChar == 'y') {
             // check for "Infinity"
@@ -784,10 +871,14 @@ public class ScriptRuntime {
         }
         if (value instanceof Scriptable) {
             Scriptable obj = (Scriptable)value;
-            Object v = ScriptableObject.getProperty(obj, "toSource");
-            if (v instanceof Function) {
-                Function f = (Function)v;
-                return toString(f.call(cx, scope, obj, emptyArgs));
+            // Wrapped Java objects won't have "toSource" and will report
+            // errors for get()s of nonexistent name, so use has() first
+            if (ScriptableObject.hasProperty(obj, "toSource")) {
+                Object v = ScriptableObject.getProperty(obj, "toSource");
+                if (v instanceof Function) {
+                    Function f = (Function)v;
+                    return toString(f.call(cx, scope, obj, emptyArgs));
+                }
             }
             return toString(value);
         }
@@ -872,6 +963,9 @@ public class ScriptRuntime {
         return toObject(Context.getContext(), scope, val);
     }
 
+    /**
+     * Warning: this doesn't allow to resolve primitive prototype properly when many top scopes are involved
+     */
     public static Scriptable toObjectOrNull(Context cx, Object obj)
     {
         if (obj instanceof Scriptable) {
@@ -883,10 +977,24 @@ public class ScriptRuntime {
     }
 
     /**
+     * @param scope the scope that should be used to resolve primitive prototype
+     */
+    public static Scriptable toObjectOrNull(Context cx, Object obj,
+                                            final Scriptable scope)
+    {
+        if (obj instanceof Scriptable) {
+            return (Scriptable)obj;
+        } else if (obj != null && obj != Undefined.instance) {
+            return toObject(cx, scope, obj);
+        }
+        return null;
+    }
+
+    /**
      * @deprecated Use {@link #toObject(Scriptable, Object)} instead.
      */
     public static Scriptable toObject(Scriptable scope, Object val,
-                                      Class staticClass)
+                                      Class<?> staticClass)
     {
         if (val instanceof Scriptable) {
             return (Scriptable)val;
@@ -904,20 +1012,26 @@ public class ScriptRuntime {
         if (val instanceof Scriptable) {
             return (Scriptable) val;
         }
+        if (val instanceof String) {
+            NativeString result = new NativeString((String)val);
+            setBuiltinProtoAndParent(result, scope, TopLevel.Builtins.String);
+            return result;
+        }
+        if (val instanceof Number) {
+            NativeNumber result = new NativeNumber(((Number)val).doubleValue());
+            setBuiltinProtoAndParent(result, scope, TopLevel.Builtins.Number);
+            return result;
+        }
+        if (val instanceof Boolean) {
+            NativeBoolean result = new NativeBoolean(((Boolean)val).booleanValue());
+            setBuiltinProtoAndParent(result, scope, TopLevel.Builtins.Boolean);
+            return result;
+        }
         if (val == null) {
             throw typeError0("msg.null.to.object");
         }
         if (val == Undefined.instance) {
             throw typeError0("msg.undef.to.object");
-        }
-        String className = val instanceof String ? "String" :
-                           val instanceof Number ? "Number" :
-                           val instanceof Boolean ? "Boolean" :
-                           null;
-        if (className != null) {
-            Object[] args = { val };
-            scope = ScriptableObject.getTopLevelScope(scope);
-            return newObject(cx, scope, className, args);
         }
 
         // Extension: Wrap as a LiveConnect object.
@@ -931,7 +1045,7 @@ public class ScriptRuntime {
      * @deprecated Use {@link #toObject(Context, Scriptable, Object)} instead.
      */
     public static Scriptable toObject(Context cx, Scriptable scope, Object val,
-                                      Class staticClass)
+                                      Class<?> staticClass)
     {
         return toObject(cx, scope, val);
     }
@@ -958,6 +1072,16 @@ public class ScriptRuntime {
     {
         scope = ScriptableObject.getTopLevelScope(scope);
         Function ctor = getExistingCtor(cx, scope, constructorName);
+        if (args == null) { args = ScriptRuntime.emptyArgs; }
+        return ctor.construct(cx, scope, args);
+    }
+
+    public static Scriptable newBuiltinObject(Context cx, Scriptable scope,
+                                              TopLevel.Builtins type,
+                                              Object[] args)
+    {
+        scope = ScriptableObject.getTopLevelScope(scope);
+        Function ctor = TopLevel.getBuiltinCtor(cx, scope, type);
         if (args == null) { args = ScriptRuntime.emptyArgs; }
         return ctor.construct(cx, scope, args);
     }
@@ -1166,10 +1290,11 @@ public class ScriptRuntime {
     }
 
     /**
-     * Return -1L if str is not an index or the index value as lower 32
-     * bits of the result.
+     * Return -1L if str is not an index, or the index value as lower 32
+     * bits of the result. Note that the result needs to be cast to an int
+     * in order to produce the actual index, which may be negative.
      */
-    private static long indexFromString(String str)
+    public static long indexFromString(String str)
     {
         // The length of the decimal string representation of
         //  Integer.MAX_VALUE, 2147483647
@@ -1265,7 +1390,7 @@ public class ScriptRuntime {
     {
         long indexTest = indexFromString(s);
         if (indexTest >= 0) {
-            return new Integer((int)indexTest);
+            return Integer.valueOf((int)indexTest);
         }
         return s;
     }
@@ -1278,7 +1403,7 @@ public class ScriptRuntime {
     {
         int i = (int)d;
         if (i == d) {
-            return new Integer(i);
+            return Integer.valueOf(i);
         }
         return toString(d);
     }
@@ -1319,7 +1444,15 @@ public class ScriptRuntime {
      */
     public static Object getObjectElem(Object obj, Object elem, Context cx)
     {
-        Scriptable sobj = toObjectOrNull(cx, obj);
+    	return getObjectElem(obj, elem, cx, getTopCallScope(cx));
+    }
+
+    /**
+     * Call obj.[[Get]](id)
+     */
+    public static Object getObjectElem(Object obj, Object elem, Context cx, final Scriptable scope)
+    {
+        Scriptable sobj = toObjectOrNull(cx, obj, scope);
         if (sobj == null) {
             throw undefReadError(obj, elem);
         }
@@ -1364,10 +1497,26 @@ public class ScriptRuntime {
         return getObjectProp(sobj, property, cx);
     }
 
+    /**
+     * @param scope the scope that should be used to resolve primitive prototype
+     */
+    public static Object getObjectProp(Object obj, String property,
+                                       Context cx, final Scriptable scope)
+    {
+        Scriptable sobj = toObjectOrNull(cx, obj, scope);
+        if (sobj == null) {
+            throw undefReadError(obj, property);
+        }
+        return getObjectProp(sobj, property, cx);
+    }
+    
     public static Object getObjectProp(Scriptable obj, String property,
                                        Context cx)
     {
         if (obj instanceof XMLObject) {
+            // TODO: Change XMLObject to just use Scriptable interface
+            // to avoid paying cost of instanceof check on *every property
+            // lookup* !
             XMLObject xmlObject = (XMLObject)obj;
             return xmlObject.ecmaGet(cx, property);
         }
@@ -1376,14 +1525,32 @@ public class ScriptRuntime {
         if (result == Scriptable.NOT_FOUND) {
             if (cx.hasFeature(Context.FEATURE_STRICT_MODE)) {
                 Context.reportWarning(ScriptRuntime.getMessage1(
-                		"msg.ref.undefined.prop", property));
+                    "msg.ref.undefined.prop", property));
             }
             result = Undefined.instance;
         }
 
         return result;
     }
-
+    
+    public static Object getObjectPropNoWarn(Object obj, String property,
+                                             Context cx)
+    {
+        Scriptable sobj = toObjectOrNull(cx, obj);
+        if (sobj == null) {
+            throw undefReadError(obj, property);
+        }
+        if (obj instanceof XMLObject) {
+            // TODO: fix as mentioned in note in method above
+            getObjectProp(sobj, property, cx);
+        }
+        Object result = ScriptableObject.getProperty(sobj, property);
+        if (result == Scriptable.NOT_FOUND) {
+          return Undefined.instance;
+        }
+        return result;
+    }
+    
     /*
      * A cheaper and less general version of the above for well-known argument
      * types.
@@ -1410,7 +1577,7 @@ public class ScriptRuntime {
     {
         if (obj instanceof XMLObject) {
             XMLObject xmlObject = (XMLObject)obj;
-            return xmlObject.ecmaGet(cx, new Integer(index));
+            return xmlObject.ecmaGet(cx, Integer.valueOf(index));
         }
 
         Object result = ScriptableObject.getProperty(obj, index);
@@ -1505,7 +1672,7 @@ public class ScriptRuntime {
     {
         if (obj instanceof XMLObject) {
             XMLObject xmlObject = (XMLObject)obj;
-            xmlObject.ecmaPut(cx, new Integer(index), value);
+            xmlObject.ecmaPut(cx, Integer.valueOf(index), value);
         } else {
             ScriptableObject.putProperty(obj, index, value);
         }
@@ -1523,9 +1690,11 @@ public class ScriptRuntime {
             String s = toStringIdOrIndex(cx, elem);
             if (s == null) {
                 int index = lastIndexResult(cx);
-                result = ScriptableObject.deleteProperty(target, index);
+            	target.delete(index);
+                return !target.has(index, target);
             } else {
-                result = ScriptableObject.deleteProperty(target, s);
+            	target.delete(s);
+                return !target.has(s, target);
             }
         }
         return result;
@@ -1802,6 +1971,29 @@ public class ScriptRuntime {
         return value;
     }
 
+    public static Object strictSetName(Scriptable bound, Object value,
+            Context cx, Scriptable scope, String id) {
+        if (bound != null) {
+            // TODO: The LeftHandSide also may not be a reference to a
+            // data property with the attribute value {[[Writable]]:false},
+            // to an accessor property with the attribute value
+            // {[[Put]]:undefined}, nor to a non-existent property of an
+            // object whose [[Extensible]] internal property has the value
+            // false. In these cases a TypeError exception is thrown (11.13.1).
+            if (bound instanceof XMLObject) {
+                XMLObject xmlObject = (XMLObject) bound;
+                xmlObject.ecmaPut(cx, id, value);
+            } else {
+                ScriptableObject.putProperty(bound, id, value);
+            }
+            return value;
+        } else {
+            // See ES5 8.7.2
+            String msg = "Assignment to undefined \"" + id + "\" in strict mode";
+            throw constructError("ReferenceError", msg);
+        }
+    }
+
     public static Object setConst(Scriptable bound, Object value,
                                  Context cx, String id)
     {
@@ -1829,40 +2021,114 @@ public class ScriptRuntime {
      * to see if a given property has already been enumerated.
      *
      */
-    private static class IdEnumeration
+    private static class IdEnumeration implements Serializable
     {
+        private static final long serialVersionUID = 1L;
         Scriptable obj;
         Object[] ids;
         int index;
         ObjToIntMap used;
-        String currentId;
-        boolean enumValues;
+        Object currentId;
+        int enumType; /* one of ENUM_INIT_KEYS, ENUM_INIT_VALUES, 
+                         ENUM_INIT_ARRAY */
+        
+        // if true, integer ids will be returned as numbers rather than strings
+        boolean enumNumbers; 
+        
+        Scriptable iterator;
+    }
+    
+    public static Scriptable toIterator(Context cx, Scriptable scope, 
+                                        Scriptable obj, boolean keyOnly)
+    {
+        if (ScriptableObject.hasProperty(obj, 
+            NativeIterator.ITERATOR_PROPERTY_NAME))
+        {
+            Object v = ScriptableObject.getProperty(obj, 
+                NativeIterator.ITERATOR_PROPERTY_NAME);
+            if (!(v instanceof Callable)) {
+               throw typeError0("msg.invalid.iterator");
+            }
+            Callable f = (Callable) v;
+            Object[] args = new Object[] { keyOnly ? Boolean.TRUE
+                                                   : Boolean.FALSE };
+            v = f.call(cx, scope, obj, args);
+            if (!(v instanceof Scriptable)) {
+                throw typeError0("msg.iterator.primitive");
+            }
+            return (Scriptable) v;
+        }
+        return null;
     }
 
+    // for backwards compatibility with generated class files
     public static Object enumInit(Object value, Context cx, boolean enumValues)
+    {
+        return enumInit(value, cx, enumValues ? ENUMERATE_VALUES
+                                              : ENUMERATE_KEYS);
+    }
+
+    public static final int ENUMERATE_KEYS = 0;
+    public static final int ENUMERATE_VALUES = 1;
+    public static final int ENUMERATE_ARRAY = 2;
+    public static final int ENUMERATE_KEYS_NO_ITERATOR = 3;
+    public static final int ENUMERATE_VALUES_NO_ITERATOR = 4;
+    public static final int ENUMERATE_ARRAY_NO_ITERATOR = 5;
+
+    public static Object enumInit(Object value, Context cx, int enumType)
     {
         IdEnumeration x = new IdEnumeration();
         x.obj = toObjectOrNull(cx, value);
-        if (x.obj != null) {
+        if (x.obj == null) {
             // null or undefined do not cause errors but rather lead to empty
             // "for in" loop
-            x.enumValues = enumValues;
+            return x;
+        }
+        x.enumType = enumType;
+        x.iterator = null;
+        if (enumType != ENUMERATE_KEYS_NO_ITERATOR &&
+            enumType != ENUMERATE_VALUES_NO_ITERATOR &&
+            enumType != ENUMERATE_ARRAY_NO_ITERATOR)
+        {
+            x.iterator = toIterator(cx, x.obj.getParentScope(), x.obj,
+                                    enumType == ScriptRuntime.ENUMERATE_KEYS);
+        }
+        if (x.iterator == null) {
             // enumInit should read all initial ids before returning
             // or "for (a.i in a)" would wrongly enumerate i in a as well
             enumChangeObject(x);
         }
+        
         return x;
+    }
+    
+    public static void setEnumNumbers(Object enumObj, boolean enumNumbers) {
+        ((IdEnumeration)enumObj).enumNumbers = enumNumbers;
     }
 
     public static Boolean enumNext(Object enumObj)
     {
-        // OPT this could be more efficient
-        boolean result;
         IdEnumeration x = (IdEnumeration)enumObj;
+        if (x.iterator != null) {
+            Object v = ScriptableObject.getProperty(x.iterator, "next");
+            if (!(v instanceof Callable))
+                return Boolean.FALSE;
+            Callable f = (Callable) v;
+            Context cx = Context.getContext();
+            try {
+                x.currentId = f.call(cx, x.iterator.getParentScope(), 
+                                     x.iterator, emptyArgs);
+                return Boolean.TRUE;
+            } catch (JavaScriptException e) {
+                if (e.getValue() instanceof NativeIterator.StopIteration) {
+                  return Boolean.FALSE;
+                }
+                throw e;
+            }
+        }
         for (;;) {
             if (x.obj == null) {
-                result = false;
-                break;
+                return Boolean.FALSE;
             }
             if (x.index == x.ids.length) {
                 x.obj = x.obj.getPrototype();
@@ -1882,18 +2148,37 @@ public class ScriptRuntime {
                 int intId = ((Number)id).intValue();
                 if (!x.obj.has(intId, x.obj))
                     continue;   // must have been deleted
-                x.currentId = String.valueOf(intId);
+                x.currentId = x.enumNumbers ? (Object) (Integer.valueOf(intId))
+                                            : String.valueOf(intId);
             }
-            result = true;
-            break;
+            return Boolean.TRUE;
         }
-        return wrapBoolean(result);
     }
 
     public static Object enumId(Object enumObj, Context cx)
     {
         IdEnumeration x = (IdEnumeration)enumObj;
-        if (!x.enumValues) return x.currentId;
+        if (x.iterator != null) {
+            return x.currentId;
+        }
+        switch (x.enumType) {
+          case ENUMERATE_KEYS:
+          case ENUMERATE_KEYS_NO_ITERATOR:
+            return x.currentId;
+          case ENUMERATE_VALUES:
+          case ENUMERATE_VALUES_NO_ITERATOR:
+            return enumValue(enumObj, cx);
+          case ENUMERATE_ARRAY:
+          case ENUMERATE_ARRAY_NO_ITERATOR:
+            Object[] elements = { x.currentId, enumValue(enumObj, cx) };
+            return cx.newArray(ScriptableObject.getTopLevelScope(x.obj), elements);
+          default:
+            throw Kit.codeBug();
+        }
+    }
+
+    public static Object enumValue(Object enumObj, Context cx) {
+        IdEnumeration x = (IdEnumeration)enumObj;
 
         Object result;
 
@@ -1987,7 +2272,7 @@ public class ScriptRuntime {
 
         Object value;
         for (;;) {
-            // Ignore XML lookup as requred by ECMA 357, 11.2.2.1
+            // Ignore XML lookup as required by ECMA 357, 11.2.2.1
             value = ScriptableObject.getProperty(thisObj, index);
             if (value != Scriptable.NOT_FOUND) {
                 break;
@@ -2016,19 +2301,42 @@ public class ScriptRuntime {
      * as ScriptRuntime.lastStoredScriptable() for consumption as thisObj.
      * The caller must call ScriptRuntime.lastStoredScriptable() immediately
      * after calling this method.
+     * Warning: this doesn't allow to resolve primitive prototype properly when
+     * many top scopes are involved.
      */
     public static Callable getPropFunctionAndThis(Object obj,
                                                   String property,
                                                   Context cx)
     {
         Scriptable thisObj = toObjectOrNull(cx, obj);
+        return getPropFunctionAndThisHelper(obj, property, cx, thisObj);
+    }
+
+    /**
+     * Prepare for calling obj.property(...): return function corresponding to
+     * obj.property and make obj properly converted to Scriptable available
+     * as ScriptRuntime.lastStoredScriptable() for consumption as thisObj.
+     * The caller must call ScriptRuntime.lastStoredScriptable() immediately
+     * after calling this method.
+     */
+    public static Callable getPropFunctionAndThis(Object obj,
+                                                  String property,
+                                                  Context cx, final Scriptable scope)
+    {
+        Scriptable thisObj = toObjectOrNull(cx, obj, scope);
+        return getPropFunctionAndThisHelper(obj, property, cx, thisObj);
+    }
+    
+    private static Callable getPropFunctionAndThisHelper(Object obj,
+          String property, Context cx, Scriptable thisObj)
+    {
         if (thisObj == null) {
             throw undefCallError(obj, property);
         }
 
         Object value;
         for (;;) {
-            // Ignore XML lookup as requred by ECMA 357, 11.2.2.1
+            // Ignore XML lookup as required by ECMA 357, 11.2.2.1
             value = ScriptableObject.getProperty(thisObj, property);
             if (value != Scriptable.NOT_FOUND) {
                 break;
@@ -2049,7 +2357,7 @@ public class ScriptRuntime {
             if (noSuchMethod instanceof Callable)
                 value = new NoSuchMethodShim((Callable)noSuchMethod, property);
             else
-                throw notFunctionError(value, property);
+                throw notFunctionError(thisObj, value, property);
         }
 
         storeScriptable(cx, thisObj);
@@ -2139,7 +2447,7 @@ public class ScriptRuntime {
                                      String filename, int lineNumber)
     {
         if (callType == Node.SPECIALCALL_EVAL) {
-            if (NativeGlobal.isEvalFunction(fun)) {
+            if (thisObj.getParentScope() == null && NativeGlobal.isEvalFunction(fun)) {
                 return evalSpecial(cx, scope, callerThis, args,
                                    filename, lineNumber);
             }
@@ -2184,16 +2492,7 @@ public class ScriptRuntime {
                                      Scriptable thisObj, Object[] args)
     {
         int L = args.length;
-        Callable function;
-        if (thisObj instanceof Callable) {
-            function = (Callable)thisObj;
-        } else {
-            Object value = thisObj.getDefaultValue(ScriptRuntime.FunctionClass);
-            if (!(value instanceof Callable)) {
-                throw ScriptRuntime.notFunctionError(value, thisObj);
-            }
-            function = (Callable)value;
-        }
+        Callable function = getCallable(thisObj);
 
         Scriptable callThis = null;
         if (L != 0) {
@@ -2207,20 +2506,8 @@ public class ScriptRuntime {
         Object[] callArgs;
         if (isApply) {
             // Follow Ecma 15.3.4.3
-            if (L <= 1) {
-                callArgs = ScriptRuntime.emptyArgs;
-            } else {
-                Object arg1 = args[1];
-                if (arg1 == null || arg1 == Undefined.instance) {
-                    callArgs = ScriptRuntime.emptyArgs;
-                } else if (arg1 instanceof NativeArray
-                           || arg1 instanceof Arguments)
-                {
-                    callArgs = cx.getElements((Scriptable) arg1);
-                } else {
-                    throw ScriptRuntime.typeError0("msg.arg.isnt.array");
-                }
-            }
+            callArgs = L <= 1 ? ScriptRuntime.emptyArgs : 
+                getApplyArguments(cx, args[1]);
         } else {
             // Follow Ecma 15.3.4.4
             if (L <= 1) {
@@ -2232,6 +2519,32 @@ public class ScriptRuntime {
         }
 
         return function.call(cx, scope, callThis, callArgs);
+    }
+
+    static Object[] getApplyArguments(Context cx, Object arg1)
+    {
+        if (arg1 == null || arg1 == Undefined.instance) {
+            return ScriptRuntime.emptyArgs;
+        } else if (arg1 instanceof NativeArray || arg1 instanceof Arguments) {
+            return cx.getElements((Scriptable) arg1);
+        } else {
+            throw ScriptRuntime.typeError0("msg.arg.isnt.array");
+        }
+    }
+
+    static Callable getCallable(Scriptable thisObj)
+    {
+        Callable function;
+        if (thisObj instanceof Callable) {
+            function = (Callable)thisObj;
+        } else {
+            Object value = thisObj.getDefaultValue(ScriptRuntime.FunctionClass);
+            if (!(value instanceof Callable)) {
+                throw ScriptRuntime.notFunctionError(value, thisObj);
+            }
+            function = (Callable)value;
+        }
+        return function;
     }
 
     /**
@@ -2271,11 +2584,17 @@ public class ScriptRuntime {
         ErrorReporter reporter;
         reporter = DefaultErrorReporter.forEval(cx.getErrorReporter());
 
+        Evaluator evaluator = Context.createInterpreter();
+        if (evaluator == null) {
+            throw new JavaScriptException("Interpreter not present",
+                    filename, lineNumber);            
+        }
+
         // Compile with explicit interpreter instance to force interpreter
         // mode.
-        Script script = cx.compileString((String)x, new Interpreter(),
+        Script script = cx.compileString((String)x, evaluator,
                                          reporter, sourceName, 1, null);
-        ((InterpretedFunction)script).idata.evalScriptFlag = true;
+        evaluator.setEvalScriptFlag(script);
         Callable c = (Callable)script;
         return c.call(cx, scope, (Scriptable)thisArg, ScriptRuntime.emptyArgs);
     }
@@ -2289,13 +2608,10 @@ public class ScriptRuntime {
             return "object";
         if (value == Undefined.instance)
             return "undefined";
+        if (value instanceof ScriptableObject)
+        	return ((ScriptableObject) value).getTypeOf();
         if (value instanceof Scriptable)
-        {
-            if (value instanceof XMLObject)
-                return "xml";
-
             return (value instanceof Callable) ? "function" : "object";
-        }
         if (value instanceof String)
             return "string";
         if (value instanceof Number)
@@ -2358,6 +2674,14 @@ public class ScriptRuntime {
             else
                 return wrapNumber(toNumber(val1) + toNumber(val2));
         return toString(val1).concat(toString(val2));
+    }
+
+    public static String add(String val1, Object val2) {
+        return val1.concat(toString(val2));
+    }
+
+    public static String add(Object val1, String val2) {
+        return toString(val1).concat(val2);
     }
 
     /**
@@ -2508,13 +2832,17 @@ public class ScriptRuntime {
         }
     }
 
-    private static Object toPrimitive(Object val)
+    public static Object toPrimitive(Object val) {
+        return toPrimitive(val, null);
+    }
+    
+    public static Object toPrimitive(Object val, Class<?> typeHint)
     {
         if (!(val instanceof Scriptable)) {
             return val;
         }
         Scriptable s = (Scriptable)val;
-        Object result = s.getDefaultValue(null);
+        Object result = s.getDefaultValue(typeHint);
         if (result instanceof Scriptable)
             throw typeError0("msg.bad.default.value");
         return result;
@@ -2572,7 +2900,14 @@ public class ScriptRuntime {
                     }
                 }
                 if (x instanceof Wrapper && y instanceof Wrapper) {
-                    return ((Wrapper)x).unwrap() == ((Wrapper)y).unwrap();
+                    // See bug 413838. Effectively an extension to ECMA for
+                    // the LiveConnect case.
+                    Object unwrappedX = ((Wrapper)x).unwrap();
+                    Object unwrappedY = ((Wrapper)y).unwrap();
+                    return unwrappedX == unwrappedY ||
+                           (isPrimitive(unwrappedX) &&
+                            isPrimitive(unwrappedY) &&
+                            eq(unwrappedX, unwrappedY));
                 }
                 return false;
             } else if (y instanceof Boolean) {
@@ -2595,6 +2930,12 @@ public class ScriptRuntime {
             warnAboutNonJSObject(x);
             return x == y;
         }
+    }
+    
+    public static boolean isPrimitive(Object obj) {
+        return obj == null || obj == Undefined.instance || 
+                (obj instanceof Number) || (obj instanceof String) ||
+                (obj instanceof Boolean);
     }
 
     static boolean eqNumber(double x, Object y)
@@ -2698,8 +3039,6 @@ public class ScriptRuntime {
         }
 
         // for primitive values on LHS, return false
-        // XXX we may want to change this so that
-        // 5 instanceof Number == true
         if (! (a instanceof Scriptable))
             return false;
 
@@ -2791,16 +3130,20 @@ public class ScriptRuntime {
 
     public static ScriptableObject getGlobal(Context cx) {
         final String GLOBAL_CLASS = "org.mozilla.javascript.tools.shell.Global";
-        Class globalClass = Kit.classOrNull(GLOBAL_CLASS);
+        Class<?> globalClass = Kit.classOrNull(GLOBAL_CLASS);
         if (globalClass != null) {
             try {
-                Class[] parm = { ScriptRuntime.ContextClass };
-                Constructor globalClassCtor = globalClass.getConstructor(parm);
+                Class<?>[] parm = { ScriptRuntime.ContextClass };
+                Constructor<?> globalClassCtor = globalClass.getConstructor(parm);
                 Object[] arg = { cx };
                 return (ScriptableObject) globalClassCtor.newInstance(arg);
-            } catch (Exception e) {
+            } 
+            catch (RuntimeException e) {
+                throw e;
+            } 
+            catch (Exception e) {
                 // fall through...
-            }
+            } 
         }
         return new ImporterTopLevel(cx);
     }
@@ -2823,7 +3166,8 @@ public class ScriptRuntime {
                                    Context cx, Scriptable scope,
                                    Scriptable thisObj, Object[] args)
     {
-        if (scope == null) throw new IllegalArgumentException();
+        if (scope == null)
+            throw new IllegalArgumentException();
         if (cx.topCallScope != null) throw new IllegalStateException();
 
         Object result;
@@ -2868,6 +3212,16 @@ public class ScriptRuntime {
             if (proto == null) {
                 return staticTopScope;
             }
+        }
+    }
+    
+    public static void addInstructionCount(Context cx, int instructionsToAdd)
+    {
+    	cx.instructionCount += instructionsToAdd;
+        if (cx.instructionCount > cx.instructionThreshold) 
+        {
+            cx.observeInstructionCount(cx.instructionCount);
+            cx.instructionCount = 0;
         }
     }
 
@@ -2996,6 +3350,12 @@ public class ScriptRuntime {
                 re = ee;
                 errorName = "InternalError";
                 errorMsg = ee.getMessage();
+            } else if (cx.hasFeature(Context.FEATURE_ENHANCED_JAVA_ACCESS)) {
+                // With FEATURE_ENHANCED_JAVA_ACCESS, scripts can catch
+                // all exception types
+                re = new WrappedException(t);
+                errorName = "JavaException";
+                errorMsg = t.toString();
             } else {
                 // Script can catch only instances of JavaScriptException,
                 // EcmaError and EvaluatorException
@@ -3009,26 +3369,31 @@ public class ScriptRuntime {
             int line = re.lineNumber();
             Object args[];
             if (line > 0) {
-                args = new Object[] { errorMsg, sourceUri, new Integer(line) };
+                args = new Object[] { errorMsg, sourceUri, Integer.valueOf(line) };
             } else {
                 args = new Object[] { errorMsg, sourceUri };
             }
 
             Scriptable errorObject = cx.newObject(scope, errorName, args);
             ScriptableObject.putProperty(errorObject, "name", errorName);
+            // set exception in Error objects to enable non-ECMA "stack" property
+            if (errorObject instanceof NativeError) {
+                ((NativeError) errorObject).setStackProvider(re);
+            }
 
-            if (javaException != null) {
+            if (javaException != null && isVisible(cx, javaException)) {
                 Object wrap = cx.getWrapFactory().wrap(cx, scope, javaException,
                                                        null);
                 ScriptableObject.defineProperty(
                     errorObject, "javaException", wrap,
                     ScriptableObject.PERMANENT | ScriptableObject.READONLY);
             }
-            Object wrap = cx.getWrapFactory().wrap(cx, scope, re, null);
-            ScriptableObject.defineProperty(
-                errorObject, "rhinoException", wrap,
-                ScriptableObject.PERMANENT | ScriptableObject.READONLY);
-
+            if (isVisible(cx, re)) {
+                Object wrap = cx.getWrapFactory().wrap(cx, scope, re, null);
+                ScriptableObject.defineProperty(
+                        errorObject, "rhinoException", wrap,
+                        ScriptableObject.PERMANENT | ScriptableObject.READONLY);                
+            }
             obj = errorObject;
         }
 
@@ -3036,18 +3401,26 @@ public class ScriptRuntime {
         // See ECMA 12.4
         catchScopeObject.defineProperty(
             exceptionName, obj, ScriptableObject.PERMANENT);
-
-        // Add special Rhino object __exception__ defined in the catch
-        // scope that can be used to retrieve the Java exception associated
-        // with the JavaScript exception (to get stack trace info, etc.)
-        catchScopeObject.defineProperty(
-            "__exception__", Context.javaToJS(t, catchScopeObject),
-            ScriptableObject.PERMANENT|ScriptableObject.DONTENUM);
+        
+        if (isVisible(cx, t)) {
+            // Add special Rhino object __exception__ defined in the catch
+            // scope that can be used to retrieve the Java exception associated
+            // with the JavaScript exception (to get stack trace info, etc.)
+            catchScopeObject.defineProperty(
+                "__exception__", Context.javaToJS(t, scope),
+                ScriptableObject.PERMANENT|ScriptableObject.DONTENUM);
+        }
 
         if (cacheObj) {
             catchScopeObject.associateValue(t, obj);
         }
         return catchScopeObject;
+    }
+    
+    private static boolean isVisible(Context cx, Object obj) {
+        ClassShutter shutter = cx.getClassShutter();
+        return shutter == null ||
+            shutter.visibleToScripts(obj.getClass().getName());
     }
 
     public static Scriptable enterWith(Object obj, Context cx,
@@ -3110,6 +3483,16 @@ public class ScriptRuntime {
         object.setPrototype(proto);
     }
 
+    public static void setBuiltinProtoAndParent(ScriptableObject object,
+                                                Scriptable scope,
+                                                TopLevel.Builtins type)
+    {
+        scope = ScriptableObject.getTopLevelScope(scope);
+        object.setParentScope(scope);
+        object.setPrototype(TopLevel.getBuiltinPrototype(scope, type));
+    }
+
+
     public static void initFunction(Context cx, Scriptable scope,
                                     NativeFunction function, int type,
                                     boolean fromEvalCode)
@@ -3143,38 +3526,49 @@ public class ScriptRuntime {
     }
 
     public static Scriptable newArrayLiteral(Object[] objects,
-                                             int[] skipIndexces,
+                                             int[] skipIndices,
                                              Context cx, Scriptable scope)
     {
+        final int SKIP_DENSITY = 2;
         int count = objects.length;
         int skipCount = 0;
-        if (skipIndexces != null) {
-            skipCount = skipIndexces.length;
+        if (skipIndices != null) {
+            skipCount = skipIndices.length;
         }
         int length = count + skipCount;
-        Integer lengthObj = new Integer(length);
-        Scriptable arrayObj;
-        /*
-         * If the version is 120, then new Array(4) means create a new
-         * array with 4 as the first element.  In this case, we have to
-         * set length property manually.
-         */
-        if (cx.getLanguageVersion() == Context.VERSION_1_2) {
-            arrayObj = cx.newObject(scope, "Array", ScriptRuntime.emptyArgs);
-            ScriptableObject.putProperty(arrayObj, "length", lengthObj);
-        } else {
-            arrayObj = cx.newObject(scope, "Array", new Object[] { lengthObj });
+        if (length > 1 && skipCount * SKIP_DENSITY < length) {
+            // If not too sparse, create whole array for constructor
+            Object[] sparse;
+            if (skipCount == 0) {
+                sparse = objects;
+            } else {
+                sparse = new Object[length];
+                int skip = 0;
+                for (int i = 0, j = 0; i != length; ++i) {
+                    if (skip != skipCount && skipIndices[skip] == i) {
+                        sparse[i] = Scriptable.NOT_FOUND;
+                        ++skip;
+                        continue;
+                    }
+                    sparse[i] = objects[j];
+                    ++j;
+                }
+            }
+            return cx.newArray(scope, sparse);
         }
+        
+        Scriptable array = cx.newArray(scope, length);
+
         int skip = 0;
         for (int i = 0, j = 0; i != length; ++i) {
-            if (skip != skipCount && skipIndexces[skip] == i) {
+            if (skip != skipCount && skipIndices[skip] == i) {
                 ++skip;
                 continue;
             }
-            ScriptableObject.putProperty(arrayObj, i, objects[j]);
+            ScriptableObject.putProperty(array, i, objects[j]);
             ++j;
         }
-        return arrayObj;
+        return array;
     }
 
   /**
@@ -3205,9 +3599,13 @@ public class ScriptRuntime {
             int getterSetter = getterSetters[i];
             Object value = propertyValues[i];
             if (id instanceof String) {
-                if (getterSetter == 0)
-                    ScriptableObject.putProperty(object, (String)id, value);
-                else {
+                if (getterSetter == 0) {
+                    if (isSpecialProperty((String)id)) {
+                        specialRef(object, (String)id, cx).set(cx, value);
+                    } else {
+                        ScriptableObject.putProperty(object, (String)id, value);
+                    }
+                } else {
                     Callable fun;
                     String definer;
                     if (getterSetter < 0)   // < 0 means get foo() ...
@@ -3299,44 +3697,81 @@ public class ScriptRuntime {
         Object[] arguments = {arg1, arg2, arg3, arg4};
         return getMessage(messageId, arguments);
     }
+    
+    /**
+     * This is an interface defining a message provider. Create your
+     * own implementation to override the default error message provider.
+     * 
+     * @author Mike Harm
+     */
+    public interface MessageProvider {
+     
+        /**
+         * Returns a textual message identified by the given messageId,
+         * parameterized by the given arguments.
+         *
+         * @param messageId the identifier of the message
+         * @param arguments the arguments to fill into the message
+         */
+        String getMessage(String messageId, Object[] arguments);
+    }
+
+    public static MessageProvider messageProvider = new DefaultMessageProvider();
+
+    public static String getMessage(String messageId, Object[] arguments)
+    {
+        return messageProvider.getMessage(messageId, arguments);
+    }
 
     /* OPT there's a noticable delay for the first error!  Maybe it'd
      * make sense to use a ListResourceBundle instead of a properties
      * file to avoid (synchronized) text parsing.
      */
-    public static String getMessage(String messageId, Object[] arguments)
-    {
-        final String defaultResource
-            = "org.mozilla.javascript.resources.Messages";
+    private static class DefaultMessageProvider implements MessageProvider {
+        public String getMessage(String messageId, Object[] arguments) {
+            final String defaultResource
+                = "org.mozilla.javascript.resources.Messages";
 
-        Context cx = Context.getCurrentContext();
-        Locale locale = cx != null ? cx.getLocale() : Locale.getDefault();
+            Context cx = Context.getCurrentContext();
+            Locale locale = cx != null ? cx.getLocale() : Locale.getDefault();
 
-        // ResourceBundle does cacheing.
-        ResourceBundle rb = ResourceBundle.getBundle(defaultResource, locale);
+            // ResourceBundle does caching.
+            ResourceBundle rb = ResourceBundle.getBundle(defaultResource, locale);
 
-        String formatString;
-        try {
-            formatString = rb.getString(messageId);
-        } catch (java.util.MissingResourceException mre) {
-            throw new RuntimeException
-                ("no message resource found for message property "+ messageId);
+            String formatString;
+            try {
+                formatString = rb.getString(messageId);
+            } catch (java.util.MissingResourceException mre) {
+                throw new RuntimeException
+                    ("no message resource found for message property "+ messageId);
+            }
+
+            /*
+             * It's OK to format the string, even if 'arguments' is null;
+             * we need to format it anyway, to make double ''s collapse to
+             * single 's.
+             */
+            MessageFormat formatter = new MessageFormat(formatString);
+            return formatter.format(arguments);
         }
-
-        /*
-         * It's OK to format the string, even if 'arguments' is null;
-         * we need to format it anyway, to make double ''s collapse to
-         * single 's.
-         */
-        // TODO: MessageFormat is not available on pJava
-        MessageFormat formatter = new MessageFormat(formatString);
-        return formatter.format(arguments);
     }
 
     public static EcmaError constructError(String error, String message)
     {
         int[] linep = new int[1];
         String filename = Context.getSourcePositionFromStack(linep);
+        return constructError(error, message, filename, linep[0], null, 0);
+    }
+    
+    public static EcmaError constructError(String error,
+                                           String message,
+                                           int lineNumberDelta)
+    {
+        int[] linep = new int[1];
+        String filename = Context.getSourcePositionFromStack(linep);
+        if (linep[0] != 0) {
+            linep[0] += lineNumberDelta;
+        }
         return constructError(error, message, filename, linep[0], null, 0);
     }
 
@@ -3421,19 +3856,38 @@ public class ScriptRuntime {
     public static RuntimeException notFunctionError(Object value,
                                                     Object messageHelper)
     {
-        // XXX Use value for better error reporting
+        // Use value for better error reporting
         String msg = (messageHelper == null)
                      ? "null" : messageHelper.toString();
         if (value == Scriptable.NOT_FOUND) {
             return typeError1("msg.function.not.found", msg);
         }
-        return typeError2("msg.isnt.function", msg,
-                value == null ? "null" : value.getClass().getName());
+        return typeError2("msg.isnt.function", msg, typeof(value));
+    }
+
+    public static RuntimeException notFunctionError(Object obj, Object value,
+            String propertyName)
+    {
+        // Use obj and value for better error reporting
+        String objString = toString(obj);
+        if (obj instanceof NativeFunction) {
+            // Omit function body in string representations of functions
+            int curly = objString.indexOf('{');
+            if (curly > -1) {
+                objString = objString.substring(0, curly + 1) + "...}";
+            }
+        }
+        if (value == Scriptable.NOT_FOUND) {
+            return typeError2("msg.function.not.found.in", propertyName,
+                    objString);
+        }
+        return typeError3("msg.isnt.function.in", propertyName, objString,
+                          typeof(value));
     }
 
     private static RuntimeException notXmlError(Object value)
     {
-        throw typeError1("msg.isnt.xml.object", ScriptRuntime.toString(value));
+        throw typeError1("msg.isnt.xml.object", toString(value));
     }
 
     private static void warnAboutNonJSObject(Object nonJSObject)
@@ -3568,7 +4022,7 @@ public class ScriptRuntime {
 
     private static void storeScriptable(Context cx, Scriptable value)
     {
-        // The previosly stored scratchScriptable should be consumed
+        // The previously stored scratchScriptable should be consumed
         if (cx.scratchScriptable != null)
             throw new IllegalStateException();
         cx.scratchScriptable = value;
@@ -3603,7 +4057,23 @@ public class ScriptRuntime {
         return Context.reportRuntimeError1(msg, val.getClass().getName());
     }
 
+    /**
+     * Equivalent to executing "new Error(message)" from JavaScript. 
+     * @param cx the current context
+     * @param scope the current scope
+     * @param message the message
+     * @return a JavaScriptException you should throw
+     */
+    public static JavaScriptException throwError(Context cx, Scriptable scope, 
+            String message) {
+      int[] linep = { 0 };
+      String filename = Context.getSourcePositionFromStack(linep);
+        final Scriptable error = newBuiltinObject(cx, scope,
+                TopLevel.Builtins.Error, new Object[] { message, filename, Integer.valueOf(linep[0]) });
+        return new JavaScriptException(error, filename, linep[0]);
+    }
+
     public static final Object[] emptyArgs = new Object[0];
     public static final String[] emptyStrings = new String[0];
-
+    
 }
