@@ -24,9 +24,12 @@
  * Contributor(s):
  *   Norris Boyd
  *   Igor Bukanov
+ *   Daniel Gredler
  *   Bob Jervis
  *   Roger Lawrence
+ *   Cameron McCormack
  *   Steve Weiss
+ *   Hannes Wallnoefer
  *
  * Alternatively, the contents of this file may be used under the terms of
  * the GNU General Public License Version 2 or later (the "GPL"), in which
@@ -44,10 +47,27 @@
 
 package org.mozilla.javascript;
 
-import java.lang.reflect.*;
-import java.util.Hashtable;
-import java.io.*;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.io.Serializable;
+import java.lang.annotation.Annotation;
+import java.lang.reflect.AccessibleObject;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Member;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Map;
+
 import org.mozilla.javascript.debug.DebuggableObject;
+import org.mozilla.javascript.annotations.JSConstructor;
+import org.mozilla.javascript.annotations.JSFunction;
+import org.mozilla.javascript.annotations.JSGetter;
+import org.mozilla.javascript.annotations.JSSetter;
+import org.mozilla.javascript.annotations.JSStaticFunction;
 
 /**
  * This is the default implementation of the Scriptable interface. This
@@ -126,39 +146,39 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      */
     private Scriptable parentScopeObject;
 
-    private static final Slot REMOVED = new Slot(null, 0, READONLY);
-
-    static {
-        REMOVED.wasDeleted = 1;
-    }
-
     private transient Slot[] slots;
     // If count >= 0, it gives number of keys or if count < 0,
     // it indicates sealed object where ~count gives number of keys
     private int count;
 
-    // cache; may be removed for smaller memory footprint
-    private transient Slot lastAccess = REMOVED;
+    // gateways into the definition-order linked list of slots
+    private transient Slot firstAdded;
+    private transient Slot lastAdded;
 
-    // associated values are not serialized
-    private transient volatile Hashtable associatedValues;
+
+    private volatile Map<Object,Object> associatedValues;
 
     private static final int SLOT_QUERY = 1;
     private static final int SLOT_MODIFY = 2;
-    private static final int SLOT_REMOVE = 3;
+    private static final int SLOT_MODIFY_CONST = 3;
     private static final int SLOT_MODIFY_GETTER_SETTER = 4;
-    private static final int SLOT_MODIFY_CONST = 5;
+    private static final int SLOT_CONVERT_ACCESSOR_TO_DATA = 5;
+
+    // initial slot array size, must be a power of 2
+    private static final int INITIAL_SLOT_SIZE = 4;
+
+    private boolean isExtensible = true;
 
     private static class Slot implements Serializable
     {
-        static final long serialVersionUID = -3539051633409902634L;
-
+        private static final long serialVersionUID = -6090581677123995491L;
         String name; // This can change due to caching
         int indexOrHash;
         private volatile short attributes;
-        transient volatile byte wasDeleted;
+        transient volatile boolean wasDeleted;
         volatile Object value;
-        transient volatile Slot next;
+        transient volatile Slot next; // next in hash table bucket
+        transient volatile Slot orderedNext; // next in linked list
 
         Slot(String name, int indexOrHash, int attributes)
         {
@@ -174,6 +194,22 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             if (name != null) {
                 indexOrHash = name.hashCode();
             }
+        }
+
+        boolean setValue(Object value, Scriptable owner, Scriptable start) {
+            if ((attributes & READONLY) != 0) {
+                return true;
+            }
+            if (owner == start) {
+                this.value = value;
+                return true;
+            } else {
+                return false;
+            }
+        }
+
+        Object getValue(Scriptable start) {
+            return value;
         }
 
         final int getAttributes()
@@ -196,6 +232,24 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             }
         }
 
+        ScriptableObject getPropertyDescriptor(Context cx, Scriptable scope) {
+            return buildDataDescriptor(
+                scope, 
+                (value == null ? Undefined.instance : value), 
+                attributes);
+        }
+
+    }
+
+    protected static ScriptableObject buildDataDescriptor(Scriptable scope, Object value, int attributes) {
+      ScriptableObject desc = new NativeObject();
+      ScriptRuntime.setBuiltinProtoAndParent(desc, scope, TopLevel.Builtins.Object);
+
+      desc.defineProperty("value",        value, EMPTY);
+      desc.defineProperty("writable",     (attributes & READONLY) == 0, EMPTY);
+      desc.defineProperty("enumerable",   (attributes & DONTENUM) == 0, EMPTY);
+      desc.defineProperty("configurable", (attributes & PERMANENT) == 0, EMPTY);
+      return desc;
     }
 
     private static final class GetterSlot extends Slot
@@ -209,6 +263,94 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         {
             super(name, indexOrHash, attributes);
         }
+
+        @Override
+        ScriptableObject getPropertyDescriptor(Context cx, Scriptable parent) {
+          ScriptableObject desc = super.getPropertyDescriptor(cx, parent);
+          desc.delete("value");
+          desc.delete("writable");
+          if (getter != null) desc.defineProperty("get", getter, EMPTY);
+          if (setter != null) desc.defineProperty("set", setter, EMPTY);
+          return desc;
+        }
+
+        @Override
+        boolean setValue(Object value, Scriptable owner, Scriptable start) {
+            if (setter == null) {
+                if (getter != null) {
+                    if (Context.getContext().hasFeature(Context.FEATURE_STRICT_MODE)) {
+                        // Based on TC39 ES3.1 Draft of 9-Feb-2009, 8.12.4, step 2,
+                        // we should throw a TypeError in this case.
+                        throw ScriptRuntime.typeError1("msg.set.prop.no.setter", name);
+                    }
+                    // Assignment to a property with only a getter defined. The
+                    // assignment is ignored. See bug 478047.
+                    return true;
+                }
+            } else {
+                Context cx = Context.getContext();
+                if (setter instanceof MemberBox) {
+                    MemberBox nativeSetter = (MemberBox)setter;
+                    Class<?> pTypes[] = nativeSetter.argTypes;
+                    // XXX: cache tag since it is already calculated in
+                    // defineProperty ?
+                    Class<?> valueType = pTypes[pTypes.length - 1];
+                    int tag = FunctionObject.getTypeTag(valueType);
+                    Object actualArg = FunctionObject.convertArg(cx, start,
+                                                                 value, tag);
+                    Object setterThis;
+                    Object[] args;
+                    if (nativeSetter.delegateTo == null) {
+                        setterThis = start;
+                        args = new Object[] { actualArg };
+                    } else {
+                        setterThis = nativeSetter.delegateTo;
+                        args = new Object[] { start, actualArg };
+                    }
+                    nativeSetter.invoke(setterThis, args);
+                } else {
+                    Function f = (Function)setter;
+                    f.call(cx, f.getParentScope(), start,
+                           new Object[] { value });
+                }
+                return true;
+            }
+            return super.setValue(value, owner, start);
+        }
+
+        @Override
+        Object getValue(Scriptable start) {
+            if (getter != null) {
+                if (getter instanceof MemberBox) {
+                    MemberBox nativeGetter = (MemberBox)getter;
+                    Object getterThis;
+                    Object[] args;
+                    if (nativeGetter.delegateTo == null) {
+                        getterThis = start;
+                        args = ScriptRuntime.emptyArgs;
+                    } else {
+                        getterThis = nativeGetter.delegateTo;
+                        args = new Object[] { start };
+                    }
+                    return nativeGetter.invoke(getterThis, args);
+                } else {
+                    Function f = (Function)getter;
+                    Context cx = Context.getContext();
+                    return f.call(cx, f.getParentScope(), start,
+                                  ScriptRuntime.emptyArgs);
+                }
+            }
+            if (value instanceof LazilyLoadedCtor) {
+                LazilyLoadedCtor initializer = (LazilyLoadedCtor)value;
+                try {
+                    initializer.init();
+                } finally {
+                    value = initializer.getValue();
+                }
+            }
+            return value;
+        }
+
     }
 
     static void checkValidAttributes(int attributes)
@@ -230,6 +372,15 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
 
         parentScopeObject = scope;
         prototypeObject = prototype;
+    }
+    
+    /**
+     * Gets the value that will be returned by calling the typeof operator on this object.
+     * @return default is "object" unless {@link #avoidObjectDetection()} is <code>true</code> in which
+     * case it returns "undefined"
+     */
+    public String getTypeOf() {
+    	return avoidObjectDetection() ? "undefined" : "object";
     }
 
     /**
@@ -343,7 +494,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
     public void delete(String name)
     {
         checkNotSealed(name, 0);
-        accessSlot(name, 0, SLOT_REMOVE);
+        removeSlot(name, 0);
     }
 
     /**
@@ -357,7 +508,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
     public void delete(int index)
     {
         checkNotSealed(null, index);
-        accessSlot(null, index, SLOT_REMOVE);
+        removeSlot(null, index);
     }
 
     /**
@@ -537,23 +688,40 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * XXX: write docs.
      */
     public void setGetterOrSetter(String name, int index,
-                                  Callable getterOrSeter, boolean isSetter)
+                                  Callable getterOrSetter, boolean isSetter)
+    {
+        setGetterOrSetter(name, index, getterOrSetter, isSetter, false);
+    }
+
+    private void setGetterOrSetter(String name, int index, Callable getterOrSetter, boolean isSetter, boolean force)
     {
         if (name != null && index != 0)
             throw new IllegalArgumentException(name);
 
-        checkNotSealed(name, index);
-        GetterSlot gslot = (GetterSlot)getSlot(name, index,
-                                               SLOT_MODIFY_GETTER_SETTER);
-        gslot.checkNotReadonly();
-        if (isSetter) {
-            gslot.setter = getterOrSeter;
+        if (!force) {
+          checkNotSealed(name, index);
+        }
+
+        final GetterSlot gslot;
+        if (isExtensible()) {
+          gslot = (GetterSlot)getSlot(name, index, SLOT_MODIFY_GETTER_SETTER);
         } else {
-            gslot.getter = getterOrSeter;
+          gslot = (GetterSlot)getSlot(name, index, SLOT_QUERY);
+          if (gslot == null)
+            return;
+        }
+        
+        if (!force) {
+          gslot.checkNotReadonly();
+        }
+        if (isSetter) {
+            gslot.setter = getterOrSetter;
+        } else {
+            gslot.getter = getterOrSetter;
         }
         gslot.value = Undefined.instance;
     }
-    
+
     /**
      * Get the getter or setter for a given property. Used by __lookupGetter__
      * and __lookupSetter__.
@@ -580,6 +748,22 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             return result != null ? result : Undefined.instance;
         } else
             return Undefined.instance;
+    }
+
+    /**
+     * Returns whether a property is a getter or a setter
+     * @param name property name
+     * @param index property index
+     * @param setter true to check for a setter, false for a getter
+     * @return whether the property is a getter or a setter
+     */
+    protected boolean isGetterOrSetter(String name, int index, boolean setter) {
+        Slot slot = getSlot(name, index, SLOT_QUERY);
+        if (slot instanceof GetterSlot) {
+            if (setter && ((GetterSlot)slot).setter != null) return true;
+            if (!setter && ((GetterSlot)slot).getter != null) return true;
+        }
+        return false;
     }
 
     void addLazilyInitializedValue(String name, int index,
@@ -672,12 +856,12 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      *
      * See ECMA 8.6.2.6.
      */
-    public Object getDefaultValue(Class typeHint)
+    public Object getDefaultValue(Class<?> typeHint)
     {
         return getDefaultValue(this, typeHint);
     }
     
-    public static Object getDefaultValue(Scriptable object, Class typeHint)
+    public static Object getDefaultValue(Scriptable object, Class<?> typeHint)
     {
         Context cx = null;
         for (int i=0; i < 2; i++) {
@@ -775,6 +959,21 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
 
         return ScriptRuntime.jsDelegatesTo(instance, this);
     }
+    
+    /**
+     * Emulate the SpiderMonkey (and Firefox) feature of allowing
+     * custom objects to avoid detection by normal "object detection"
+     * code patterns. This is used to implement document.all.
+     * See https://bugzilla.mozilla.org/show_bug.cgi?id=412247.
+     * This is an analog to JOF_DETECTING from SpiderMonkey; see
+     * https://bugzilla.mozilla.org/show_bug.cgi?id=248549.
+     * Other than this special case, embeddings should return false.
+     * @return true if this object should avoid object detection
+     * @since 1.7R1
+     */
+    public boolean avoidObjectDetection() {
+        return false;
+    }
 
     /**
      * Custom <tt>==</tt> operator.
@@ -847,7 +1046,9 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      *
      * If the method's name is "jsConstructor", the method is
      * considered to define the body of the constructor. Only one
-     * method of this name may be defined.
+     * method of this name may be defined. You may use the varargs forms
+     * for constructors documented in {@link FunctionObject#FunctionObject(String, Member, Scriptable)}
+     * 
      * If no method is found that can serve as constructor, a Java
      * constructor will be selected to serve as the JavaScript
      * constructor in the following manner. If the class has only one
@@ -885,7 +1086,8 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * @see org.mozilla.javascript.ScriptableObject
      *      #defineProperty(String, Class, int)
      */
-    public static void defineClass(Scriptable scope, Class clazz)
+    public static <T extends Scriptable> void defineClass(
+            Scriptable scope, Class<T> clazz)
         throws IllegalAccessException, InstantiationException,
                InvocationTargetException
     {
@@ -915,8 +1117,8 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      *            during execution of methods of the named class
      * @since 1.4R3
      */
-    public static void defineClass(Scriptable scope, Class clazz,
-                                   boolean sealed)
+    public static <T extends Scriptable> void defineClass(
+            Scriptable scope, Class<T> clazz, boolean sealed)
         throws IllegalAccessException, InstantiationException,
                InvocationTargetException
     {
@@ -950,8 +1152,9 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      *            during execution of methods of the named class
      * @since 1.6R2
      */
-    public static String defineClass(Scriptable scope, Class clazz,
-                                     boolean sealed, boolean mapInheritance)
+    public static <T extends Scriptable> String defineClass(
+            Scriptable scope, Class<T> clazz, boolean sealed,
+            boolean mapInheritance)
         throws IllegalAccessException, InstantiationException,
                InvocationTargetException
     {
@@ -964,9 +1167,10 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         return name;
     }
 
-    static BaseFunction buildClassCtor(Scriptable scope, Class clazz,
-                                       boolean sealed,
-                                       boolean mapInheritance)
+    static <T extends Scriptable> BaseFunction buildClassCtor(
+            Scriptable scope, Class<T> clazz,
+            boolean sealed,
+            boolean mapInheritance)
         throws IllegalAccessException, InstantiationException,
                InvocationTargetException
     {
@@ -975,7 +1179,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             Method method = methods[i];
             if (!method.getName().equals("init"))
                 continue;
-            Class[] parmTypes = method.getParameterTypes();
+            Class<?>[] parmTypes = method.getParameterTypes();
             if (parmTypes.length == 3 &&
                 parmTypes[0] == ScriptRuntime.ContextClass &&
                 parmTypes[1] == ScriptRuntime.ScriptableClass &&
@@ -1001,8 +1205,8 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         // If we got here, there isn't an "init" method with the right
         // parameter types.
 
-        Constructor[] ctors = clazz.getConstructors();
-        Constructor protoCtor = null;
+        Constructor<?>[] ctors = clazz.getConstructors();
+        Constructor<?> protoCtor = null;
         for (int i=0; i < ctors.length; i++) {
             if (ctors[i].getParameterTypes().length == 0) {
                 protoCtor = ctors[i];
@@ -1021,10 +1225,14 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         // prototype-based inheritance if requested to do so.
         Scriptable superProto = null;
         if (mapInheritance) {
-            Class superClass = clazz.getSuperclass();
-            if (ScriptRuntime.ScriptableClass.isAssignableFrom(superClass)
-                    && !Modifier.isAbstract(superClass.getModifiers())) {
-                String name = ScriptableObject.defineClass(scope, superClass, sealed, mapInheritance);
+            Class<? super T> superClass = clazz.getSuperclass();
+            if (ScriptRuntime.ScriptableClass.isAssignableFrom(superClass) &&
+                !Modifier.isAbstract(superClass.getModifiers()))
+            {
+                Class<? extends Scriptable> superScriptable =
+                    extendsScriptable(superClass);
+                String name = ScriptableObject.defineClass(scope, 
+                        superScriptable, sealed, mapInheritance);
                 if (name != null) {
                     superProto = ScriptableObject.getClassPrototype(scope, name);
                 }
@@ -1044,8 +1252,13 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         final String setterPrefix = "jsSet_";
         final String ctorName = "jsConstructor";
 
-        Member ctorMember = FunctionObject.findSingleMethod(methods, ctorName);
-
+        Member ctorMember = findAnnotatedMember(methods, JSConstructor.class);
+        if (ctorMember == null) {
+            ctorMember = findAnnotatedMember(ctors, JSConstructor.class);
+        }
+        if (ctorMember == null) {
+            ctorMember = FunctionObject.findSingleMethod(methods, ctorName);
+        }        
         if (ctorMember == null) {
             if (ctors.length == 1) {
                 ctorMember = ctors[0];
@@ -1069,20 +1282,22 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         ctor.initAsConstructor(scope, proto);
 
         Method finishInit = null;
-        for (int i=0; i < methods.length; i++) {
-            if (methods[i] == ctorMember) {
+        HashSet<String> staticNames = new HashSet<String>(),
+                        instanceNames = new HashSet<String>();
+        for (Method method : methods) {
+            if (method == ctorMember) {
                 continue;
             }
-            String name = methods[i].getName();
+            String name = method.getName();
             if (name.equals("finishInit")) {
-                Class[] parmTypes = methods[i].getParameterTypes();
+                Class<?>[] parmTypes = method.getParameterTypes();
                 if (parmTypes.length == 3 &&
                     parmTypes[0] == ScriptRuntime.ScriptableClass &&
                     parmTypes[1] == FunctionObject.class &&
                     parmTypes[2] == ScriptRuntime.ScriptableClass &&
-                    Modifier.isStatic(methods[i].getModifiers()))
+                    Modifier.isStatic(method.getModifiers()))
                 {
-                    finishInit = methods[i];
+                    finishInit = method;
                     continue;
                 }
             }
@@ -1092,53 +1307,71 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             if (name.equals(ctorName))
                 continue;
 
+            Annotation annotation = null;
             String prefix = null;
-            if (name.startsWith(functionPrefix)) {
-                prefix = functionPrefix;
-            } else if (name.startsWith(staticFunctionPrefix)) {
-                prefix = staticFunctionPrefix;
-                if (!Modifier.isStatic(methods[i].getModifiers())) {
-                    throw Context.reportRuntimeError(
-                        "jsStaticFunction must be used with static method.");
-                }
-            } else if (name.startsWith(getterPrefix)) {
-                prefix = getterPrefix;
-            } else if (name.startsWith(setterPrefix)) {
-                prefix = setterPrefix;
-            } else {
+            if (method.isAnnotationPresent(JSFunction.class)) {
+                annotation = method.getAnnotation(JSFunction.class);
+            } else if (method.isAnnotationPresent(JSStaticFunction.class)) {
+                annotation = method.getAnnotation(JSStaticFunction.class);
+            } else if (method.isAnnotationPresent(JSGetter.class)) {
+                annotation = method.getAnnotation(JSGetter.class);
+            } else if (method.isAnnotationPresent(JSSetter.class)) {
                 continue;
             }
-            name = name.substring(prefix.length());
-            if (prefix == setterPrefix)
-                continue;   // deal with set when we see get
-            if (prefix == getterPrefix) {
+
+            if (annotation == null) {
+                if (name.startsWith(functionPrefix)) {
+                    prefix = functionPrefix;
+                } else if (name.startsWith(staticFunctionPrefix)) {
+                    prefix = staticFunctionPrefix;
+                } else if (name.startsWith(getterPrefix)) {
+                    prefix = getterPrefix;
+                } else if (annotation == null) {
+                    // note that setterPrefix is among the unhandled names here -
+                    // we deal with that when we see the getter
+                    continue;
+                }
+            }
+
+            boolean isStatic = annotation instanceof JSStaticFunction
+                    || prefix == staticFunctionPrefix;
+            HashSet<String> names = isStatic ? staticNames : instanceNames;
+            String propName = getPropertyName(name, prefix, annotation);
+            if (names.contains(propName)) {
+                throw Context.reportRuntimeError2("duplicate.defineClass.name",
+                        name, propName);
+            }
+            names.add(propName);
+            name = propName;
+
+            if (annotation instanceof JSGetter || prefix == getterPrefix) {
                 if (!(proto instanceof ScriptableObject)) {
                     throw Context.reportRuntimeError2(
                         "msg.extend.scriptable",
                         proto.getClass().toString(), name);
                 }
-                Method setter = FunctionObject.findSingleMethod(
-                                    methods,
-                                    setterPrefix + name);
+                Method setter = findSetterMethod(methods, name, setterPrefix);
                 int attr = ScriptableObject.PERMANENT |
                            ScriptableObject.DONTENUM  |
                            (setter != null ? 0
                                            : ScriptableObject.READONLY);
                 ((ScriptableObject) proto).defineProperty(name, null,
-                                                          methods[i], setter,
+                                                          method, setter,
                                                           attr);
                 continue;
             }
 
-            FunctionObject f = new FunctionObject(name, methods[i], proto);
+            if (isStatic && !Modifier.isStatic(method.getModifiers())) {
+                throw Context.reportRuntimeError(
+                        "jsStaticFunction must be used with static method.");
+            }
+
+            FunctionObject f = new FunctionObject(name, method, proto);
             if (f.isVarArgsConstructor()) {
                 throw Context.reportRuntimeError1
                     ("msg.varargs.fun", ctorMember.getName());
             }
-            Scriptable dest = prefix == staticFunctionPrefix
-                              ? ctor
-                              : proto;
-            defineProperty(dest, name, f, DONTENUM);
+            defineProperty(isStatic ? ctor : proto, name, f, DONTENUM);
             if (sealed) {
                 f.sealObject();
             }
@@ -1159,6 +1392,81 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         }
 
         return ctor;
+    }
+
+    private static Member findAnnotatedMember(AccessibleObject[] members,
+                                              Class<? extends Annotation> annotation) {
+        for (AccessibleObject member : members) {
+            if (member.isAnnotationPresent(annotation)) {
+                return (Member) member;
+            }
+        }
+        return null;
+    }
+
+    private static Method findSetterMethod(Method[] methods,
+                                           String name,
+                                           String prefix) {
+        String newStyleName = "set"
+                + Character.toUpperCase(name.charAt(0))
+                + name.substring(1);
+        for (Method method : methods) {
+            JSSetter annotation = method.getAnnotation(JSSetter.class);
+            if (annotation != null) {
+                if (name.equals(annotation.value()) ||
+                        ("".equals(annotation.value()) && newStyleName.equals(method.getName()))) {
+                    return method;
+                }
+            }
+        }
+        String oldStyleName = prefix + name;
+        for (Method method : methods) {
+            if (oldStyleName.equals(method.getName())) {
+                return method;
+            }
+        }
+        return null;
+    }
+
+    private static String getPropertyName(String methodName,
+                                          String prefix,
+                                          Annotation annotation) {
+        if (prefix != null) {
+            return methodName.substring(prefix.length());
+        }
+        String propName = null;
+        if (annotation instanceof JSGetter) {
+            propName = ((JSGetter) annotation).value();
+            if (propName == null || propName.length() == 0) {
+                if (methodName.length() > 3 && methodName.startsWith("get")) {
+                    propName = methodName.substring(3);
+                    if (Character.isUpperCase(propName.charAt(0))) {
+                        if (propName.length() == 1) {
+                            propName = propName.toLowerCase();
+                        } else if (!Character.isUpperCase(propName.charAt(1))){
+                            propName = Character.toLowerCase(propName.charAt(0))
+                                    + propName.substring(1);
+                        }
+                    }
+                }
+            }
+        } else if (annotation instanceof JSFunction) {
+            propName = ((JSFunction) annotation).value();
+        } else if (annotation instanceof JSStaticFunction) {
+            propName = ((JSStaticFunction) annotation).value();
+        }
+        if (propName == null || propName.length() == 0) {
+            propName = methodName;
+        }
+        return propName;
+    }
+
+    @SuppressWarnings({"unchecked"})
+    private static <T extends Scriptable> Class<T> extendsScriptable(Class<?> c)
+    {
+        if (ScriptRuntime.ScriptableClass.isAssignableFrom(c))
+            return (Class<T>) c;
+        return null;
     }
 
     /**
@@ -1231,7 +1539,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * @param attributes the attributes of the JavaScript property
      * @see org.mozilla.javascript.Scriptable#put(String, Scriptable, Object)
      */
-    public void defineProperty(String propertyName, Class clazz,
+    public void defineProperty(String propertyName, Class<?> clazz,
                                int attributes)
     {
         int length = propertyName.length();
@@ -1315,7 +1623,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             }
 
             String errorId = null;
-            Class[] parmTypes = getter.getParameterTypes();
+            Class<?>[] parmTypes = getter.getParameterTypes();
             if (parmTypes.length == 0) {
                 if (delegatedForm) {
                     errorId = "msg.obj.getter.parms";
@@ -1358,7 +1666,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             }
 
             String errorId = null;
-            Class[] parmTypes = setter.getParameterTypes();
+            Class<?>[] parmTypes = setter.getParameterTypes();
             if (parmTypes.length == 1) {
                 if (delegatedForm) {
                     errorId = "msg.setter2.expected";
@@ -1388,6 +1696,208 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         gslot.setter = setterBox;
     }
 
+    public void defineOwnProperties(Context cx, ScriptableObject props) {
+        Object[] ids = props.getIds();
+        for (Object id : ids) {
+            String name = ScriptRuntime.toString(id);
+            Object descObj = props.get(id);
+            ScriptableObject desc = ensureScriptableObject(descObj);
+            checkValidPropertyDefinition(getSlot(name, 0, SLOT_QUERY), desc);
+        }
+        for (Object id : ids) {
+            String name = ScriptRuntime.toString(id);
+            ScriptableObject desc = (ScriptableObject) props.get(id);
+            defineOwnProperty(cx, name, desc, false);
+        }
+    }
+
+    /**
+     * Defines a property on an object
+     *
+     * Based on [[DefineOwnProperty]] from 8.12.10 of the spec
+     *
+     * @param cx the current Context
+     * @param id the name/index of the property
+     * @param desc the new property descriptor, as described in 8.6.1
+     */
+    public void defineOwnProperty(Context cx, Object id, ScriptableObject desc) {
+        defineOwnProperty(cx, id, desc, true);
+    }
+
+    private void defineOwnProperty(Context cx, Object id, ScriptableObject desc, boolean checkValid) {
+        Slot slot = getSlot(cx, id, SLOT_QUERY);
+
+        if (checkValid)
+            checkValidPropertyDefinition(slot, desc);
+
+        final int attributes;
+        if (slot == null) { // new slot
+            slot = getSlot(cx, id, SLOT_MODIFY);
+            attributes = applyDescriptorToAttributeBitset(DONTENUM|READONLY|PERMANENT, desc);
+        } else {
+            attributes = applyDescriptorToAttributeBitset(slot.getAttributes(), desc);
+        }
+
+        defineOwnProperty(cx, slot, desc, attributes);
+    }
+
+    private void defineOwnProperty(Context cx, Slot slot, ScriptableObject desc, int attributes) {
+        String name = slot.name;
+        int index = slot.indexOrHash;
+
+        if (isAccessorDescriptor(desc)) {
+            if ( !(slot instanceof GetterSlot) ) {
+                slot = getSlot(cx, (name != null ? name : index), SLOT_MODIFY_GETTER_SETTER);
+            }
+
+            GetterSlot gslot = (GetterSlot) slot;
+
+            Object getter = getProperty(desc, "get");
+            if (getter != NOT_FOUND) {
+                gslot.getter = getter;
+            }
+            Object setter = getProperty(desc, "set");
+            if (setter != NOT_FOUND) {
+                gslot.setter = setter;
+            }
+
+            gslot.value = Undefined.instance;
+            gslot.setAttributes(attributes);
+        } else {
+            if (slot instanceof GetterSlot && isDataDescriptor(desc)) {
+                slot = getSlot(cx, (name != null ? name : index), SLOT_CONVERT_ACCESSOR_TO_DATA);
+            }
+
+            Object value = getProperty(desc, "value");
+            if (value != NOT_FOUND) {
+                slot.value = value;
+            }
+            slot.setAttributes(attributes);
+        }
+    }
+
+    private void checkValidPropertyDefinition(Slot slot, ScriptableObject desc) {
+        Object getter = getProperty(desc, "get");
+        if (getter != NOT_FOUND && getter != Undefined.instance && !(getter instanceof Callable)) {
+            throw ScriptRuntime.notFunctionError(getter);
+        }
+        Object setter = getProperty(desc, "set");
+        if (setter != NOT_FOUND && setter != Undefined.instance && !(setter instanceof Callable)) {
+            throw ScriptRuntime.notFunctionError(setter);
+        }
+        if (isDataDescriptor(desc) && isAccessorDescriptor(desc)) {
+            throw ScriptRuntime.typeError0("msg.both.data.and.accessor.desc");
+        }
+
+        if (slot == null) { // new property
+            if (!isExtensible()) throw ScriptRuntime.typeError0("msg.not.extensible");
+        } else {
+            ScriptableObject current = slot.getPropertyDescriptor(Context.getContext(), this);
+            if (isFalse(current.get("configurable", current))) {
+                String id = slot.name != null ?
+                        slot.name : Integer.toString(slot.indexOrHash);
+                if (isTrue(getProperty(desc, "configurable")))
+                    throw ScriptRuntime.typeError1(
+                        "msg.change.configurable.false.to.true", id);
+                if (isTrue(current.get("enumerable", current)) != isTrue(getProperty(desc, "enumerable")))
+                    throw ScriptRuntime.typeError1(
+                        "msg.change.enumerable.with.configurable.false", id);
+                if (isGenericDescriptor(desc)) {
+                    // no further validation required
+                } else if (isDataDescriptor(desc) && isDataDescriptor(current)) {
+                    if (isFalse(current.get("writable", current))) {
+                        if (isTrue(getProperty(desc, "writable")))
+                            throw ScriptRuntime.typeError1(
+                                "msg.change.writable.false.to.true.with.configurable.false", id);
+
+                        if (changes(current.get("value", current), getProperty(desc, "value")))
+                            throw ScriptRuntime.typeError1(
+                                "msg.change.value.with.writable.false", id);
+                    }
+                } else if (isAccessorDescriptor(desc) && isAccessorDescriptor(current)) {
+                    if (changes(current.get("set", current), setter))
+                        throw ScriptRuntime.typeError1(
+                            "msg.change.setter.with.configurable.false", id);
+
+                    if (changes(current.get("get", current), getter))
+                        throw ScriptRuntime.typeError1(
+                            "msg.change.getter.with.configurable.false", id);
+                } else {
+                    if (isDataDescriptor(current))
+                        throw ScriptRuntime.typeError1(
+                            "msg.change.property.data.to.accessor.with.configurable.false", id);
+                    else
+                        throw ScriptRuntime.typeError1(
+                            "msg.change.property.accessor.to.data.with.configurable.false", id);
+                }
+            }
+        }
+    }
+
+    protected static boolean isTrue(Object value) {
+        return (value == NOT_FOUND) ? false : ScriptRuntime.toBoolean(value);
+    }
+
+    protected static boolean isFalse(Object value) {
+        return !isTrue(value);
+    }
+
+    private boolean changes(Object currentValue, Object newValue) {
+        if (newValue == NOT_FOUND) return false;
+        if (currentValue == NOT_FOUND) {
+            currentValue = Undefined.instance;
+        }
+        return !ScriptRuntime.shallowEq(currentValue, newValue);
+    }
+
+    protected int applyDescriptorToAttributeBitset(int attributes,
+                                                   ScriptableObject desc)
+    {
+        Object enumerable = getProperty(desc, "enumerable");
+        if (enumerable != NOT_FOUND) {
+            attributes = ScriptRuntime.toBoolean(enumerable)
+                    ? attributes & ~DONTENUM : attributes | DONTENUM;
+        }
+
+        Object writable = getProperty(desc, "writable");
+        if (writable != NOT_FOUND) {
+            attributes = ScriptRuntime.toBoolean(writable)
+                    ? attributes & ~READONLY : attributes | READONLY;
+        }
+
+        Object configurable = getProperty(desc, "configurable");
+        if (configurable != NOT_FOUND) {
+            attributes = ScriptRuntime.toBoolean(configurable)
+                    ? attributes & ~PERMANENT : attributes | PERMANENT;
+        }
+
+        return attributes;
+    }
+
+    protected boolean isDataDescriptor(ScriptableObject desc) {
+        return hasProperty(desc, "value") || hasProperty(desc, "writable");
+    }
+
+    protected boolean isAccessorDescriptor(ScriptableObject desc) {
+        return hasProperty(desc, "get") || hasProperty(desc, "set");
+    }
+
+    protected boolean isGenericDescriptor(ScriptableObject desc) {
+        return !isDataDescriptor(desc) && !isAccessorDescriptor(desc);
+    }
+
+    protected Scriptable ensureScriptable(Object arg) {
+        if ( !(arg instanceof Scriptable) )
+            throw ScriptRuntime.typeError1("msg.arg.not.object", ScriptRuntime.typeof(arg));
+        return (Scriptable) arg;
+    }
+
+    protected ScriptableObject ensureScriptableObject(Object arg) {
+        if ( !(arg instanceof ScriptableObject) )
+            throw ScriptRuntime.typeError1("msg.arg.not.object", ScriptRuntime.typeof(arg));
+        return (ScriptableObject) arg;
+    }
+
     /**
      * Search for names in a class, adding the resulting methods
      * as properties.
@@ -1401,7 +1911,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * @param attributes the attributes of the new properties
      * @see org.mozilla.javascript.FunctionObject
      */
-    public void defineFunctionProperties(String[] names, Class clazz,
+    public void defineFunctionProperties(String[] names, Class<?> clazz,
                                          int attributes)
     {
         Method[] methods = FunctionObject.getMethodList(clazz);
@@ -1422,7 +1932,8 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * See ECMA 15.2.4.
      */
     public static Scriptable getObjectPrototype(Scriptable scope) {
-        return getClassPrototype(scope, "Object");
+        return TopLevel.getBuiltinPrototype(getTopLevelScope(scope),
+                TopLevel.Builtins.Object);
     }
 
     /**
@@ -1430,7 +1941,13 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * See ECMA 15.3.4.
      */
     public static Scriptable getFunctionPrototype(Scriptable scope) {
-        return getClassPrototype(scope, "Function");
+        return TopLevel.getBuiltinPrototype(getTopLevelScope(scope),
+                TopLevel.Builtins.Function);
+    }
+
+    public static Scriptable getArrayPrototype(Scriptable scope) {
+        return TopLevel.getBuiltinPrototype(getTopLevelScope(scope),
+                TopLevel.Builtins.Array);
     }
 
     /**
@@ -1488,16 +2005,38 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         }
     }
 
+    public boolean isExtensible() {
+      return isExtensible;
+    }
+
+    public void preventExtensions() {
+      isExtensible = false;
+    }
+
     /**
      * Seal this object.
      *
-     * A sealed object may not have properties added or removed. Once
-     * an object is sealed it may not be unsealed.
+     * It is an error to add properties to or delete properties from 
+     * a sealed object. It is possible to change the value of an 
+     * existing property. Once an object is sealed it may not be unsealed.
      *
      * @since 1.4R3
      */
     public synchronized void sealObject() {
         if (count >= 0) {
+            // Make sure all LazilyLoadedCtors are initialized before sealing.
+            Slot slot = firstAdded;
+            while (slot != null) {
+                if (slot.value instanceof LazilyLoadedCtor) {
+                    LazilyLoadedCtor initializer = (LazilyLoadedCtor) slot.value;
+                    try {
+                        initializer.init();
+                    } finally {
+                        slot.value = initializer.getValue();
+                    }
+                }
+                slot = slot.orderedNext;
+            }
             count = ~count;
         }
     }
@@ -1505,11 +2044,9 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
     /**
      * Return true if this object is sealed.
      *
-     * It is an error to attempt to add or remove properties to
-     * a sealed object.
-     *
      * @return true if sealed, false otherwise.
      * @since 1.4R3
+     * @see #sealObject()
      */
     public final boolean isSealed() {
         return count < 0;
@@ -1550,6 +2087,33 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
     }
 
     /**
+     * Gets an indexed property from an object or any object in its prototype 
+     * chain and coerces it to the requested Java type.
+     * <p>
+     * Searches the prototype chain for a property with integral index
+     * <code>index</code>. Note that if you wish to look for properties with numerical
+     * but non-integral indicies, you should use getProperty(Scriptable,String) with
+     * the string value of the index.
+     * <p>
+     * @param s a JavaScript object
+     * @param index an integral index
+     * @param type the required Java type of the result
+     * @return the value of a property with name <code>name</code> found in
+     *         <code>obj</code> or any object in its prototype chain, or
+     *         null if not found. Note that it does not return 
+     *         {@link Scriptable#NOT_FOUND} as it can ordinarily not be 
+     *         converted to most of the types.
+     * @since 1.7R3
+     */
+    public static <T> T getTypedProperty(Scriptable s, int index, Class<T> type) {
+        Object val = getProperty(s, index);
+        if(val == Scriptable.NOT_FOUND) {
+            val = null;
+        }
+        return type.cast(Context.jsToJava(val, type));
+    }
+
+    /**
      * Gets an indexed property from an object or any object in its prototype chain.
      * <p>
      * Searches the prototype chain for a property with integral index
@@ -1575,6 +2139,30 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             obj = obj.getPrototype();
         } while (obj != null);
         return result;
+    }
+
+    /**
+     * Gets a named property from an object or any object in its prototype chain
+     * and coerces it to the requested Java type.
+     * <p>
+     * Searches the prototype chain for a property named <code>name</code>.
+     * <p>
+     * @param s a JavaScript object
+     * @param name a property name
+     * @param type the required Java type of the result
+     * @return the value of a property with name <code>name</code> found in
+     *         <code>obj</code> or any object in its prototype chain, or
+     *         null if not found. Note that it does not return 
+     *         {@link Scriptable#NOT_FOUND} as it can ordinarily not be 
+     *         converted to most of the types.
+     * @since 1.7R3
+     */
+    public static <T> T getTypedProperty(Scriptable s, String name, Class<T> type) {
+        Object val = getProperty(s, name);
+        if(val == Scriptable.NOT_FOUND) {
+            val = null;
+        }
+        return type.cast(Context.jsToJava(val, type));
     }
 
     /**
@@ -1861,7 +2449,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      */
     public final Object getAssociatedValue(Object key)
     {
-        Hashtable h = associatedValues;
+        Map<Object,Object> h = associatedValues;
         if (h == null)
             return null;
         return h.get(key);
@@ -1901,25 +2489,20 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * Value can only be associated with the given object and key only once.
      * The method ignores any subsequent attempts to change the already
      * associated value.
-     * <p> The associated values are not serilized.
+     * <p> The associated values are not serialized.
      * @param key key object to select particular value.
      * @param value the value to associate
      * @return the passed value if the method is called first time for the
      * given key or old value for any subsequent calls.
      * @see #getAssociatedValue(Object key)
      */
-    public final Object associateValue(Object key, Object value)
+    public synchronized final Object associateValue(Object key, Object value)
     {
         if (value == null) throw new IllegalArgumentException();
-        Hashtable h = associatedValues;
+        Map<Object,Object> h = associatedValues;
         if (h == null) {
-            synchronized (this) {
-                h = associatedValues;
-                if (h == null) {
-                    h = new Hashtable();
-                    associatedValues = h;
-                }
-            }
+            h = new HashMap<Object,Object>();
+            associatedValues = h;
         }
         return Kit.initHash(h, key, value);
     }
@@ -1930,41 +2513,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         if (slot == null) {
             return Scriptable.NOT_FOUND;
         }
-        if (!(slot instanceof GetterSlot)) {
-            return slot.value;
-        }
-        Object getterObj = ((GetterSlot)slot).getter;
-        if (getterObj != null) {
-            if (getterObj instanceof MemberBox) {
-                MemberBox nativeGetter = (MemberBox)getterObj;
-                Object getterThis;
-                Object[] args;
-                if (nativeGetter.delegateTo == null) {
-                    getterThis = start;
-                    args = ScriptRuntime.emptyArgs;
-                } else {
-                    getterThis = nativeGetter.delegateTo;
-                    args = new Object[] { start };
-                }
-                return nativeGetter.invoke(getterThis, args);
-            } else {
-                Callable f = (Callable)getterObj;
-                Context cx = Context.getContext();
-                return f.call(cx, ScriptRuntime.getTopCallScope(cx), start,
-                              ScriptRuntime.emptyArgs);
-            }
-        }
-        Object value = slot.value;
-        if (value instanceof LazilyLoadedCtor) {
-            LazilyLoadedCtor initializer = (LazilyLoadedCtor)value;
-            try {
-                initializer.init();
-            } finally {
-                value = initializer.getValue();
-                slot.value = value;
-            }
-        }
-        return value;
+        return slot.getValue(start);
     }
 
     /**
@@ -1987,6 +2536,11 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             if (slot == null) {
                 return false;
             }
+        } else if (!isExtensible()) {
+            slot = getSlot(name, index, SLOT_QUERY);
+            if (slot == null) {
+                return true;
+            }
         } else {
             checkNotSealed(name, index);
             // either const hoisted declaration or initialization
@@ -2005,45 +2559,7 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             }
             slot = getSlot(name, index, SLOT_MODIFY);
         }
-        if ((slot.getAttributes() & READONLY) != 0)
-            return true;
-        if (slot instanceof GetterSlot) {
-            Object setterObj = ((GetterSlot)slot).setter;
-            if (setterObj != null) {
-                Context cx = Context.getContext();
-                if (setterObj instanceof MemberBox) {
-                    MemberBox nativeSetter = (MemberBox)setterObj;
-                    Class pTypes[] = nativeSetter.argTypes;
-                    // XXX: cache tag since it is already calculated in
-                    // defineProperty ?
-                    Class valueType = pTypes[pTypes.length - 1];
-                    int tag = FunctionObject.getTypeTag(valueType);
-                    Object actualArg = FunctionObject.convertArg(cx, start,
-                                                                 value, tag);
-                    Object setterThis;
-                    Object[] args;
-                    if (nativeSetter.delegateTo == null) {
-                        setterThis = start;
-                        args = new Object[] { actualArg };
-                    } else {
-                        setterThis = nativeSetter.delegateTo;
-                        args = new Object[] { start, actualArg };
-                    }
-                    nativeSetter.invoke(setterThis, args);
-                } else {
-                    Callable f = (Callable)setterObj;
-                    f.call(cx, ScriptRuntime.getTopCallScope(cx), start,
-                           new Object[] { value });
-                }
-                return true;
-            }
-        }
-        if (this == start) {
-            slot.value = value;
-            return true;
-        } else {
-            return false;
-        }
+        return slot.setValue(value, this, start);
     }
 
     private Slot findAttributeSlot(String name, int index, int accessType)
@@ -2057,224 +2573,192 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
     }
 
     /**
-     * Locate the slot with given name or index.
+     * Locate the slot with given name or index. Depending on the accessType
+     * parameter and the current slot status, a new slot may be allocated.
      *
      * @param name property name or null if slot holds spare array index.
      * @param index index or 0 if slot holds property name.
      */
     private Slot getSlot(String name, int index, int accessType)
     {
-        Slot slot;
-
-        // Query last access cache and check that it was not deleted.
-      lastAccessCheck:
-        {
-            slot = lastAccess;
-            if (name != null) {
-                if (name != slot.name)
-                    break lastAccessCheck;
-                // No String.equals here as successful slot search update
-                // name object with fresh reference of the same string.
-            } else {
-                if (slot.name != null || index != slot.indexOrHash)
-                    break lastAccessCheck;
-            }
-
-            if (slot.wasDeleted != 0)
-                break lastAccessCheck;
-
-            if (accessType == SLOT_MODIFY_GETTER_SETTER &&
-                !(slot instanceof GetterSlot))
-                break lastAccessCheck;
-
-            return slot;
+        // Check the hashtable without using synchronization
+        Slot[] slotsLocalRef = slots; // Get stable local reference
+        if (slotsLocalRef == null && accessType == SLOT_QUERY) {
+            return null;
         }
 
-        slot = accessSlot(name, index, accessType);
-        if (slot != null) {
-            // Update the cache
-            lastAccess = slot;
-        }
-        return slot;
-    }
-
-    private Slot accessSlot(String name, int index, int accessType)
-    {
         int indexOrHash = (name != null ? name.hashCode() : index);
-
-        if (accessType == SLOT_QUERY ||
-            accessType == SLOT_MODIFY ||
-            accessType == SLOT_MODIFY_CONST ||
-            accessType == SLOT_MODIFY_GETTER_SETTER)
-        {
-            // Check the hashtable without using synchronization
-
-            Slot[] slotsLocalRef = slots; // Get stable local reference
-            if (slotsLocalRef == null) {
-                if (accessType == SLOT_QUERY)
-                    return null;
-            } else {
-                int tableSize = slotsLocalRef.length;
-                int slotIndex = getSlotIndex(tableSize, indexOrHash);
-                Slot slot = slotsLocalRef[slotIndex];
-                while (slot != null) {
-                    String sname = slot.name;
-                    if (sname != null) {
-                        if (sname == name)
-                            break;
-                        if (name != null && indexOrHash == slot.indexOrHash) {
-                            if (name.equals(sname)) {
-                                // This will avoid calling String.equals when
-                                // slot is accessed with same string object
-                                // next time.
-                                slot.name = name;
-                                break;
-                            }
-                        }
-                    } else if (name == null &&
-                               indexOrHash == slot.indexOrHash) {
-                        break;
-                    }
-                    slot = slot.next;
+        if (slotsLocalRef != null) {
+            Slot slot;
+            int slotIndex = getSlotIndex(slotsLocalRef.length, indexOrHash);
+            for (slot = slotsLocalRef[slotIndex];
+                 slot != null;
+                 slot = slot.next) {
+                Object sname = slot.name;
+                if (indexOrHash == slot.indexOrHash &&
+                        (sname == name ||
+                                (name != null && name.equals(sname)))) {
+                    break;
                 }
-                if (accessType == SLOT_QUERY) {
+            }
+            switch (accessType) {
+                case SLOT_QUERY:
                     return slot;
-                } else if (accessType == SLOT_MODIFY) {
+                case SLOT_MODIFY:
+                case SLOT_MODIFY_CONST:
                     if (slot != null)
                         return slot;
-                } else if (accessType == SLOT_MODIFY_GETTER_SETTER) {
+                    break;
+                case SLOT_MODIFY_GETTER_SETTER:
                     if (slot instanceof GetterSlot)
                         return slot;
-                } else if (accessType == SLOT_MODIFY_CONST) {
-                    if (slot != null)
+                    break;
+                case SLOT_CONVERT_ACCESSOR_TO_DATA:
+                    if ( !(slot instanceof GetterSlot) )
                         return slot;
-                }
+                    break;
             }
+        }
 
-            // A new slot has to be inserted or the old has to be replaced
-            // by GetterSlot. Time to synchronize.
+        // A new slot has to be inserted or the old has to be replaced
+        // by GetterSlot. Time to synchronize.
+        return createSlot(name, indexOrHash, accessType);
+    }
 
-            synchronized (this) {
-                // Refresh local ref if another thread triggered grow
-                slotsLocalRef = slots;
-                int insertPos;
-                if (count == 0) {
-                    // Always throw away old slots if any on empty insert
-                    slotsLocalRef = new Slot[5];
-                    slots = slotsLocalRef;
-                    insertPos = getSlotIndex(slotsLocalRef.length, indexOrHash);
-                } else {
-                    int tableSize = slotsLocalRef.length;
-                    insertPos = getSlotIndex(tableSize, indexOrHash);
-                    Slot prev = slotsLocalRef[insertPos];
-                    Slot slot = prev;
-                    while (slot != null) {
-                        if (slot.indexOrHash == indexOrHash &&
-                            (slot.name == name ||
-                             (name != null && name.equals(slot.name))))
-                        {
-                            break;
-                        }
-                        prev = slot;
-                        slot = slot.next;
-                    }
-
-                    if (slot != null) {
-                        // Another thread just added a slot with same
-                        // name/index before this one entered synchronized
-                        // block. This is a race in application code and
-                        // probably indicates bug there. But for the hashtable
-                        // implementation it is harmless with the only
-                        // complication is the need to replace the added slot
-                        // if we need GetterSlot and the old one is not.
-                        if (accessType == SLOT_MODIFY_GETTER_SETTER &&
-                            !(slot instanceof GetterSlot))
-                        {
-                            GetterSlot newSlot = new GetterSlot(name, indexOrHash,
-                                    slot.getAttributes());
-                            newSlot.value = slot.value;
-                            newSlot.next = slot.next;
-                            if (prev == slot) {
-                                slotsLocalRef[insertPos] = newSlot;
-                            } else {
-                                prev.next = newSlot;
-                            }
-                            slot.wasDeleted = (byte)1;
-                            if (slot == lastAccess) {
-                                lastAccess = REMOVED;
-                            }
-                            slot = newSlot;
-                        } else if (accessType == SLOT_MODIFY_CONST) {
-                            return null;
-                        }
-                        return slot;
-                    }
-
-                    // Check if the table is not too full before inserting.
-                    if (4 * (count + 1) > 3 * slotsLocalRef.length) {
-                        slotsLocalRef = new Slot[slotsLocalRef.length * 2 + 1];
-                        copyTable(slots, slotsLocalRef, count);
-                        slots = slotsLocalRef;
-                        insertPos = getSlotIndex(slotsLocalRef.length,
-                                indexOrHash);
-                    }
-                }
-
-                Slot newSlot = (accessType == SLOT_MODIFY_GETTER_SETTER
-                                ? new GetterSlot(name, indexOrHash, 0)
-                                : new Slot(name, indexOrHash, 0));
-                if (accessType == SLOT_MODIFY_CONST)
-                    newSlot.setAttributes(CONST);
-                ++count;
-                addKnownAbsentSlot(slotsLocalRef, newSlot, insertPos);
-                return newSlot;
-            }
-
-        } else if (accessType == SLOT_REMOVE) {
-            synchronized (this) {
-                Slot[] slotsLocalRef = slots;
-                if (count != 0) {
-                    int tableSize = slots.length;
-                    int slotIndex = getSlotIndex(tableSize, indexOrHash);
-                    Slot prev = slotsLocalRef[slotIndex];
-                    Slot slot = prev;
-                    while (slot != null) {
-                        if (slot.indexOrHash == indexOrHash &&
-                            (slot.name == name ||
-                             (name != null && name.equals(slot.name))))
-                        {
-                            break;
-                        }
-                        prev = slot;
-                        slot = slot.next;
-                    }
-                    if (slot != null && (slot.getAttributes() & PERMANENT) == 0) {
-                        count--;
-                        if (prev == slot) {
-                            slotsLocalRef[slotIndex] = slot.next;
-                        } else {
-                            prev.next = slot.next;
-                        }
-                        // Mark the slot as removed to handle a case when
-                        // another thread manages to put just removed slot
-                        // into lastAccess cache.
-                        slot.wasDeleted = (byte)1;
-                        if (slot == lastAccess) {
-                            lastAccess = REMOVED;
-                        }
-                    }
-                }
-            }
-            return null;
-
+    private synchronized Slot createSlot(String name, int indexOrHash, int accessType) {
+        Slot[] slotsLocalRef = slots;
+        int insertPos;
+        if (count == 0) {
+            // Always throw away old slots if any on empty insert.
+            slotsLocalRef = new Slot[INITIAL_SLOT_SIZE];
+            slots = slotsLocalRef;
+            insertPos = getSlotIndex(slotsLocalRef.length, indexOrHash);
         } else {
-            throw Kit.codeBug();
+            int tableSize = slotsLocalRef.length;
+            insertPos = getSlotIndex(tableSize, indexOrHash);
+            Slot prev = slotsLocalRef[insertPos];
+            Slot slot = prev;
+            while (slot != null) {
+                if (slot.indexOrHash == indexOrHash &&
+                        (slot.name == name ||
+                                (name != null && name.equals(slot.name))))
+                {
+                    break;
+                }
+                prev = slot;
+                slot = slot.next;
+            }
+
+            if (slot != null) {
+                // Another thread just added a slot with same
+                // name/index before this one entered synchronized
+                // block. This is a race in application code and
+                // probably indicates bug there. But for the hashtable
+                // implementation it is harmless with the only
+                // complication is the need to replace the added slot
+                // if we need GetterSlot and the old one is not.
+
+                Slot newSlot;
+
+                if (accessType == SLOT_MODIFY_GETTER_SETTER && !(slot instanceof GetterSlot)) {
+                    newSlot = new GetterSlot(name, indexOrHash, slot.getAttributes());
+                } else if (accessType == SLOT_CONVERT_ACCESSOR_TO_DATA && (slot instanceof GetterSlot)) {
+                    newSlot = new Slot(name, indexOrHash, slot.getAttributes());
+                } else if (accessType == SLOT_MODIFY_CONST) {
+                    return null;
+                } else {
+                    return slot;
+                }
+
+                newSlot.value = slot.value;
+                newSlot.next = slot.next;
+                // add new slot to linked list
+                if (lastAdded != null)
+                    lastAdded.orderedNext = newSlot;
+                if (firstAdded == null)
+                    firstAdded = newSlot;
+                lastAdded = newSlot;
+                // add new slot to hash table
+                if (prev == slot) {
+                    slotsLocalRef[insertPos] = newSlot;
+                } else {
+                    prev.next = newSlot;
+                }
+                // other housekeeping
+                slot.wasDeleted = true;
+                slot.value = null;
+                slot.name = null;
+                return newSlot;
+            } else {
+                // Check if the table is not too full before inserting.
+                if (4 * (count + 1) > 3 * slotsLocalRef.length) {
+                    // table size must be a power of 2, always grow by x2
+                    slotsLocalRef = new Slot[slotsLocalRef.length * 2];
+                    copyTable(slots, slotsLocalRef, count);
+                    slots = slotsLocalRef;
+                    insertPos = getSlotIndex(slotsLocalRef.length,
+                            indexOrHash);
+                }
+            }
+        }
+        Slot newSlot = (accessType == SLOT_MODIFY_GETTER_SETTER
+                ? new GetterSlot(name, indexOrHash, 0)
+                : new Slot(name, indexOrHash, 0));
+        if (accessType == SLOT_MODIFY_CONST)
+            newSlot.setAttributes(CONST);
+        ++count;
+        // add new slot to linked list
+        if (lastAdded != null)
+            lastAdded.orderedNext = newSlot;
+        if (firstAdded == null)
+            firstAdded = newSlot;
+        lastAdded = newSlot;
+        // add new slot to hash table, return it
+        addKnownAbsentSlot(slotsLocalRef, newSlot, insertPos);
+        return newSlot;
+    }
+
+    private synchronized void removeSlot(String name, int index) {
+        int indexOrHash = (name != null ? name.hashCode() : index);
+
+        Slot[] slotsLocalRef = slots;
+        if (count != 0) {
+            int tableSize = slots.length;
+            int slotIndex = getSlotIndex(tableSize, indexOrHash);
+            Slot prev = slotsLocalRef[slotIndex];
+            Slot slot = prev;
+            while (slot != null) {
+                if (slot.indexOrHash == indexOrHash &&
+                        (slot.name == name ||
+                                (name != null && name.equals(slot.name))))
+                {
+                    break;
+                }
+                prev = slot;
+                slot = slot.next;
+            }
+            if (slot != null && (slot.getAttributes() & PERMANENT) == 0) {
+                count--;
+                // remove slot from hash table
+                if (prev == slot) {
+                    slotsLocalRef[slotIndex] = slot.next;
+                } else {
+                    prev.next = slot.next;
+                }
+                // Mark the slot as removed. It is still referenced
+                // from the order-added linked list, but will be
+                // cleaned up later
+                slot.wasDeleted = true;
+                slot.value = null;
+                slot.name = null;
+            }
         }
     }
 
     private static int getSlotIndex(int tableSize, int indexOrHash)
     {
-        return (indexOrHash & 0x7fffffff) % tableSize;
+        // tableSize is a power of 2
+        return indexOrHash & (tableSize - 1);
     }
 
     // Must be inside synchronized (this)
@@ -2304,7 +2788,8 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
      * This is an optimization to use when inserting into empty table,
      * after table growth or during deserialization.
      */
-    private static void addKnownAbsentSlot(Slot[] slots, Slot slot, int insertPos)
+    private static void addKnownAbsentSlot(Slot[] slots, Slot slot,
+                                           int insertPos)
     {
         if (slots[insertPos] == null) {
             slots[insertPos] = slot;
@@ -2323,18 +2808,35 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         if (s == null)
             return a;
         int c = 0;
-        for (int i=0; i < s.length; i++) {
-            Slot slot = s[i];
-            while (slot != null) {
+        Slot slot = firstAdded; 
+        while (slot != null && slot.wasDeleted) {
+            // as long as we're traversing the order-added linked list,
+            // remove deleted slots
+            slot = slot.orderedNext;
+        }
+        firstAdded = slot;
+        if (slot != null) {
+            for (;;) {
                 if (getAll || (slot.getAttributes() & DONTENUM) == 0) {
                     if (c == 0)
                         a = new Object[s.length];
-                    a[c++] = (slot.name != null ? (Object) slot.name
-                              : new Integer(slot.indexOrHash));
+                    a[c++] = slot.name != null
+                                 ? slot.name
+                                 : Integer.valueOf(slot.indexOrHash);
                 }
-                slot = slot.next;
+                Slot next = slot.orderedNext;
+                while (next != null && next.wasDeleted) {
+                    // remove deleted slots
+                    next = next.orderedNext;
+                }
+                slot.orderedNext = next;
+                if (next == null) {
+                    break;
+                }
+                slot = next;
             }
         }
+        lastAdded = slot;
         if (c == a.length)
             return a;
         Object[] result = new Object[c];
@@ -2355,14 +2857,22 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
             out.writeInt(0);
         } else {
             out.writeInt(slots.length);
-            for (int i = 0; i < slots.length; ++i) {
-                Slot slot = slots[i];
-                while (slot != null) {
-                    out.writeObject(slot);
-                    slot = slot.next;
-                    if (--objectsCount == 0)
-                        return;
+            Slot slot = firstAdded; 
+            while (slot != null && slot.wasDeleted) {
+                // as long as we're traversing the order-added linked list,
+                // remove deleted slots
+                slot = slot.orderedNext;
+            }
+            firstAdded = slot;
+            while (slot != null) {
+                out.writeObject(slot);
+                Slot next = slot.orderedNext;
+                while (next != null && next.wasDeleted) {
+                    // remove deleted slots
+                    next = next.orderedNext;
                 }
+                slot.orderedNext = next;
+                slot = next;
             }
         }
     }
@@ -2371,21 +2881,84 @@ public abstract class ScriptableObject implements Scriptable, Serializable,
         throws IOException, ClassNotFoundException
     {
         in.defaultReadObject();
-        lastAccess = REMOVED;
 
         int tableSize = in.readInt();
         if (tableSize != 0) {
+            // If tableSize is not a power of 2 find the closest 
+            // power of 2 >= the original size.
+            if ((tableSize & (tableSize - 1)) != 0) {
+                if (tableSize > 1 << 30)
+                    throw new RuntimeException("Property table overflow");
+                int newSize = INITIAL_SLOT_SIZE;
+                while (newSize < tableSize)
+                    newSize <<= 1;
+                tableSize = newSize;
+            }
             slots = new Slot[tableSize];
             int objectsCount = count;
             if (objectsCount < 0) {
                 // "this" was sealed
                 objectsCount = ~objectsCount;
             }
-            for (int i = 0; i != objectsCount; ++i) {
-                Slot slot = (Slot)in.readObject();
-                int slotIndex = getSlotIndex(tableSize, slot.indexOrHash);
-                addKnownAbsentSlot(slots, slot, slotIndex);
+            Slot prev = null;
+            for (int i=0; i != objectsCount; ++i) {
+                lastAdded = (Slot)in.readObject();
+                if (i==0) {
+                    firstAdded = lastAdded;
+                } else {
+                    prev.orderedNext = lastAdded;
+                }
+                int slotIndex = getSlotIndex(tableSize, lastAdded.indexOrHash);
+                addKnownAbsentSlot(slots, lastAdded, slotIndex);
+                prev = lastAdded;
             }
+        }
+    }
+
+    protected ScriptableObject getOwnPropertyDescriptor(Context cx, Object id) {
+        Slot slot = getSlot(cx, id, SLOT_QUERY);
+        if (slot == null) return null;
+        Scriptable scope = getParentScope();
+        return slot.getPropertyDescriptor(cx, (scope == null ? this : scope));
+    }
+
+    protected Slot getSlot(Context cx, Object id, int accessType) {
+        final Slot slot;
+        String name = ScriptRuntime.toStringIdOrIndex(cx, id);
+        if (name == null) {
+            int index = ScriptRuntime.lastIndexResult(cx);
+            slot = getSlot(null, index, accessType);
+        } else {
+            slot = getSlot(name, 0, accessType);
+        }
+        return slot;
+    }
+
+    // Partial implementation of java.util.Map. See NativeObject for
+    // a subclass that implements java.util.Map.
+
+    public int size() {
+        return count;
+    }
+
+    public boolean isEmpty() {
+        return count == 0;
+    }
+
+
+    public Object get(Object key) {
+        Object value = null;
+        if (key instanceof String) {
+            value = get((String) key, this);
+        } else if (key instanceof Number) {
+            value = get(((Number) key).intValue(), this);
+        }
+        if (value == Scriptable.NOT_FOUND || value == Undefined.instance) {
+            return null;
+        } else if (value instanceof Wrapper) {
+            return ((Wrapper) value).unwrap();
+        } else {
+            return value;
         }
     }
 
