@@ -75,7 +75,7 @@ public class WrapFactory
      * @return the wrapped value.
      */
     public Object wrap(Context cx, Scriptable scope,
-                       Object obj, Class staticType)
+                       Object obj, Class<?> staticType)
     {
         if (obj == null || obj == Undefined.instance
             || obj instanceof Scriptable)
@@ -86,7 +86,7 @@ public class WrapFactory
             if (staticType == Void.TYPE)
                 return Undefined.instance;
             if (staticType == Character.TYPE)
-                return new Integer(((Character) obj).charValue());
+                return Integer.valueOf(((Character) obj).charValue());
             return obj;
         }
         if (!isJavaPrimitiveWrap()) {
@@ -98,7 +98,7 @@ public class WrapFactory
                 return String.valueOf(((Character)obj).charValue());
             }
         }
-        Class cls = obj.getClass();
+        Class<?> cls = obj.getClass();
         if (cls.isArray()) {
             return NativeJavaArray.wrap(scope, obj);
         }
@@ -117,7 +117,7 @@ public class WrapFactory
         if (obj instanceof Scriptable) {
             return (Scriptable)obj;
         }
-        Class cls = obj.getClass();
+        Class<?> cls = obj.getClass();
         if (cls.isArray()) {
             return NativeJavaArray.wrap(scope, obj);
         }
@@ -143,11 +143,28 @@ public class WrapFactory
      * @return the wrapped value which shall not be null
      */
     public Scriptable wrapAsJavaObject(Context cx, Scriptable scope,
-                                       Object javaObject, Class staticType)
+                                       Object javaObject, Class<?> staticType)
     {
-        Scriptable wrap;
-        wrap = new NativeJavaObject(scope, javaObject, staticType);
-        return wrap;
+        return new NativeJavaObject(scope, javaObject, staticType);
+    }
+
+    /**
+     * Wrap a Java class as Scriptable instance to allow access to its static
+     * members and fields and use as constructor from JavaScript.
+     * <p>
+     * Subclasses can override this method to provide custom wrappers for
+     * Java classes.
+     *
+     * @param cx the current Context for this thread
+     * @param scope the scope of the executing script
+     * @param javaClass the class to be wrapped
+     * @return the wrapped value which shall not be null
+     * @since 1.7R3
+     */
+    public Scriptable wrapJavaClass(Context cx, Scriptable scope,
+                                    Class javaClass)
+    {
+        return new NativeJavaClass(scope, javaClass);
     }
 
     /**
